Update for Patch v3.8.2 - checksum: 947b

--- a/mod/thmod/localisation/english/ancient_relics_l_english.yml
+++ b/mod/thmod/localisation/english/ancient_relics_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
  minor_artifacts:0 "ศิลปวัตถุชั้นรอง"
- minor_artifacts_desc:1 "Minor Artifacts ( £minor_artifacts£ ) represent obscure technology and half-forgotten lore recovered from archaic civilizations, only partially understood by our own science. They are more common than Relics, and can be spent to enact various empire-wide effects."
+ minor_artifacts_desc:1 "ศิลปวัตถุชั้นรอง ( £minor_artifacts£ ) เป็นตัวแทนของเทคโนโลยีอารยธรรมโบราณที่คลุมเครือซึ่งได้รับการกู้คืนโดยวิทยาศาสตร์ของเราและเรามีความเข้าใจเพียงบางส่วนเท่านั้น พวกมันมีอยู่ทั่วไปโดยมีมากกว่าวัตถุโบราณชิ้นสำคัญและสามารถใช้เพื่อเพิ่มเอฟเฟกต์ต่างๆต่อจักรวรรดิได้"
  artifact_actions:0 "Artifact Actions"
  relics:0 "วัตถุโบราณ"
  relic_activation_cooldown:0 "คูลดาวน์การเปิดใช้งานวัตถุโบราณ"
@@ -21,8 +21,8 @@
  tech_ring_world:0 "$pc_ringworld_habitable$"
  tech_ring_world_desc:0 "$ring_world_1_MEGASTRUCTURE_DETAILS$"
  RING_WORLD_SHOW_NAME:0 "$pc_ringworld_habitable$"
- add_research_options_galactic_wonders_utopia:0 "ตัวเลือกการวิจัยที่ได้รับ:\n£engineering_research£§Y$tech_ring_world$§!\n£physics_research£§Y$tech_dyson_sphere$§!\nโลกวงแหวนและทรงกลมไดสัน ต่างก็เป็นสิ่งก่อสร้างขนาดใหญ่ที่ทรงพลังอย่างเหลือเชื่อ"
- add_research_options_galactic_wonders_utopia_megacorp:0 "ตัวเลือกการวิจัยที่ได้รับ:\n£engineering_research£§Y$tech_ring_world$§!\n£physics_research£§Y$tech_matter_decompressor$§!\n£physics_research£§Y$tech_dyson_sphere$§!\nโลกวงแหวน,เครื่องดึงมวลสารจากหลุมดำและทรงกลมไดสัน ต่างก็เป็นสิ่งก่อสร้างขนาดใหญ่ที่ทรงพลังอย่างเหลือเชื่อ"
+ add_research_options_galactic_wonders_utopia:0 "ตัวเลือกการวิจัยที่ได้รับ:\n£engineering_research£§Y$tech_ring_world$§!\n£physics_research£§Y$tech_dyson_sphere$§!\nโลกวงแหวนและทรงกลมไดสัน ต่างก็เป็นสิ่งก่อสร้างขนาดมหึมาที่ทรงพลังอย่างเหลือเชื่อ"
+ add_research_options_galactic_wonders_utopia_megacorp:0 "ตัวเลือกการวิจัยที่ได้รับ:\n£engineering_research£§Y$tech_ring_world$§!\n£physics_research£§Y$tech_matter_decompressor$§!\n£physics_research£§Y$tech_dyson_sphere$§!\nโลกวงแหวน,เครื่องดึงมวลสารจากหลุมดำและทรงกลมไดสัน ต่างก็เป็นสิ่งก่อสร้างขนาดมหึมาที่ทรงพลังอย่างเหลือเชื่อ"
  RELICS:0 "$relics$"
  MINOR_ARTIFACTS:0 "ศิลปวัตถุชั้นรอง"
  RELICS_FOUND:0 "วัตถุโบราณที่ค้นพบ"
@@ -139,9 +139,9 @@
  CHAPTER_TITLE:0 "ขั้นที่ $CHAPTER$"
  CHAPTER_PROGRESS:0 "เหลือวันก่อนที่จะเปลี่ยนสถานะความคืบหน้า: $DAYS|Y$"
  DIFFICULTY_EASY:0 "§Gง่าย§!"
- DIFFICULTY_NORMAL:0 "§YNormal§!"
- DIFFICULTY_HARD:0 "§HHard§!"
- DIFFICULTY_HELL:0 "§RHell§!"
+ DIFFICULTY_NORMAL:0 "§Yปกติ§!"
+ DIFFICULTY_HARD:0 "§Hยาก§!"
+ DIFFICULTY_HELL:0 "§Rยากมาก§!"
  DIFFICULTY_EXTRA_HELL:0 "$DIFFICULTY_HELL$$EXTRA|R$"
  LEADER_BONUS:0 "Leader Bonus: $BONUS|Y$"
  ARCHAEOLOGICAL_SITE_CHALLENGE:0 "§HChallenge§!\nThis represents how challenging the site is, relative to the level of the currently assigned Scientist."
@@ -169,7 +169,7 @@
  SHARED_SECTOR_STOCKPILE:0 "คลังเก็บที่ใช้ร่วมกัน"
  LOCAL_SECTOR_STOCKPILE:0 "คลังของเซ็กเตอร์"
  EMPIRE_RESOURCES_LABEL:0 "ทรัพยากรของจักรวรรดิ"
- SECTOR_RESOURCE_MONTHLY_TRANSFER:0 "Desired monthly transfer to shared resource stockpile"
+ SECTOR_RESOURCE_MONTHLY_TRANSFER:0 "ถ่ายโอนรายเดือนไปยังคลังทรัพยากรที่ใช้ร่วมกัน"
  SECTOR_RESOURCE_TRANSFER_AMOUNT_LABEL:0 "+$AMOUNT|*0$"
  MESSAGE_ARCHAEOLOGY_SITE_FINISHED_TITLE:0 "การขุดค้นโบราณสถานเสร็จแล้ว"
  MESSAGE_ARCHAEOLOGY_SITE_FINISHED_DESC:0 "โบราณสถานในจักรวรรดิของเราถูกขุดค้นจนหมดแล้ว"
@@ -434,10 +434,10 @@
  relic_triumph_cooldown_veryshort:0 "\n$relic_activation_cooldown$: £time£ §Y900§!"
  requires_relic_no_cooldown:0 "$TRIGGER_FAIL$§Rไม่สามารถเปิดใช้งานวัตถุโบราณอื่นในขณะที่ §Y$relic_activation_cooldown$§! ยังเปิดใช้งานอยู่§!"
  relic_queen_spawn:1 "Breed a sizeable Prethoryn fleet"
- relic_rubricator_active:0 "Create §Y500§! £minor_artifacts£Minor Artifacts."
+ relic_rubricator_active:2 "Create §Y500§! £minor_artifacts£Minor Artifacts."
  relic_galaxy_active:0 "Gain §Y50%§! tech progress in a random technology."
  relic_zro_crystal_passive:4 "$MOD_LEADER_RULER_SKILL_LEVELS$: §G+5§!\nThe cooldown to §YBreach into the Shroud§! is reduced by §G50%§!.\nGrants access to the §Y$edict_zro_crystal$§! edict, which increases leader experience gain and longevity."
- edict_zro_crystal:0 "Zro Addatives"
+ edict_zro_crystal:0 "Zro Additives"
  edict_zro_crystal_desc:0 "The properties of Zro are mysterious. Yet if given to our leaders, it seems they obtain slight precognitive abilities, allowing them to learn faster and avoid dangers that could have ended their lives early."
  edict_zro_crystal_machine:0 "$edict_zro_crystal$"
  edict_zro_crystal_machine_desc:0 "The properties of Zro are mysterious. Yet if sprinkled on our leader's motherboards, it seems to grant them slight precognitive abilities, allowing them to learn faster and avoid dangers that could have ended their existence."
@@ -546,8 +546,6 @@
  leader_trait_inspired_surveyor_desc:1 "$leader_trait_inspired_archaeologist_desc$"
  leader_trait_governor_oracle:0 "เทพยากรณ์"
  leader_trait_governor_oracle_desc:0 "The Oracle sees all."
- leader_trait_archaeologist_ancrel:0 "$leader_trait_archaeologist$"
- leader_trait_archaeologist_ancrel_desc:0 "$leader_trait_archaeologist_desc$"
  site_hidden_lab_a:0 "Frozen Complex"
  site_hidden_lab_b:0 "$site_hidden_lab_a$"
  site_hidden_lab_intro:0 "Scanners detect a hidden complex buried beneath the ice and snow of [From.Planet.GetName]. A large network of partially-collapsed or blocked tunnels seems to connect the various underground structures."
@@ -778,7 +776,9 @@
  tech_archaeoarmor:0 "เกราะพัลส์โบราณ"
  tech_archaeoarmor_desc:0 "Ionized plates of armor can carry a reactive charge to alleviate the energy of impacts, using magnetic repulsion and field projection principles."
  tech_archaeo_detection_scrambler:0 "เครื่องส่งสัญญาณรบกวนเป้าหมายโบราณ"
- tech_archaeo_detection_scrambler_desc:0 "Ping repetitors and optic diffusers with the right wavelengths can produce destructive interference and effectively scramble hostile targeting systems."
+ tech_archaeo_detection_scrambler_desc:0 "Ping repeaters and optic diffusers with the right wavelengths can produce destructive interference and effectively scramble hostile targeting systems."
+ TECH_UNLOCK_SCRAMBLER_TITLE:0 "$TECH_UNLOCK_COMPONENT_LINE$ $tech_archaeo_detection_scrambler$"
+ TECH_UNLOCK_SCRAMBLER_DESC:0 "$tech_archaeo_detection_scrambler_desc$"
  tech_archaeo_rampart:0 "ป้อมป้องกันโบราณ"
  tech_archaeo_rampart_desc:0 "Defense platforms are a cost effective way to ensure our safety, but they need to be monitored from an operation center. Fortifying our Starbase to ensure its survivability in the event of an attack, and maximizing our capacity to network independent orbital defenses would give us more time to dispatch reinforcements."
  tech_archaeo_titan_beam:0 "ลำแสงหายนะโบราณ"
@@ -801,7 +801,7 @@
  tech_archaeo_mass_accelerator_desc:0 "This cannon fires a barrage of ancient miniscule ionized spheres that charge upon contact with most force fields, giving them high levels of shield penetration. Any theory that these spheres could have been used for jewelry purposes were dismissed when a critical incident melted an entire laboratory."
  tech_archaeo_strike_crafts:0 "โดรนขุดเจาะโบราณ"
  tech_archaeo_strike_crafts_desc:0 "These high velocity drones have been equipped with antique mining lasers that virtually ignore any plating protecting their target. A tech too good to be wasted on astro mining."
- building_archaeostudies_faculty_relic_effect:0 "If built on a §YRelic World§!:\n Research Speed (Archaeostudies): §G+50%§!\n £minor_artifacts£ Minor Artifacts from £job_researcher£ Archaeoengineers: §G+0.3§!"
+ building_archaeostudies_faculty_relic_effect:1 "If built on a §YRelic World§!:\n Research Speed (Archaeostudies): §G+50%§!\n £minor_artifacts£ Minor Artifacts from £job_researcher£ Archaeoengineers: §G+0.3§!"
  building_archaeostudies_faculty:0 "คณะโบราณคดี"
  building_archaeostudies_faculty_desc:0 "A series of laboratories dedicated to the studies of technological applications of minor artifacts retrieved from elder empires."
  building_league_offices:0 "$tech_secrets_league$"
@@ -847,15 +847,15 @@
  job_archaeoengineers:0 "วิศวกรโบราณคดี"
  job_archaeoengineers_plural:0 "วิศวกรโบราณคดี"
  job_archaeoengineers_desc:0 "Sometimes, it belongs in a warship, not a museum."
- job_archaeoengineers_effect_desc:0 "£job_researcher£ $job_archaeoengineers_plural$ turn $r_consumer_goods$ into £physics£ £society£ £engineering£ §YResearch Points§!"
+ job_archaeoengineers_effect_desc:1 "£job_researcher£ $job_archaeoengineers_plural$ turn $r_consumer_goods$ into £physics£ £society£ £engineering£ §YResearch Points§!"
  job_archaeo_drone:0 "โดรนวิศวกรโบราณคดี"
  job_archaeo_drone_plural:0 "โดรนวิศวกรโบราณคดี"
  job_archaeo_drone_desc:0 "For a Hive, cultural preservation doesn't hold as much power as an archaeolaser."
- job_archaeo_drone_effect_desc:0 "£job_researcher£ $job_archaeo_drone_plural$ turn $r_minerals$ into £physics£ £society£ £engineering£ §YResearch Points§!"
+ job_archaeo_drone_effect_desc:2 "£job_researcher£ $job_archaeo_drone_plural$ turn $r_minerals$ into £physics£ £society£ £engineering£ §YResearch Points§!"
  job_archaeo_unit:0 "ยูนิตวิศวกรโบราณคดี"
  job_archaeo_unit_plural:0 "ยูนิตวิศวกรโบราณคดี"
- job_archaeo_unit_desc:0 "Specialized drones for the careful manipulation and studyof ancient artifacts."
- job_archaeo_unit_effect_desc:0 "£job_researcher£ $job_archaeo_unit_plural$ turn $r_energy$ into £physics£ £society£ £engineering£ §YResearch Points§!"
+ job_archaeo_unit_desc:0 "Specialized drones for the careful manipulation and study of ancient artifacts."
+ job_archaeo_unit_effect_desc:2 "£job_researcher£ $job_archaeo_unit_plural$ turn $r_energy$ into £physics£ £society£ £engineering£ §YResearch Points§!"
  ARCHAEO_SHIELD:0 "$tech_archaeoshield$"
  ARCHAEO_SHIELD_DESC:0 "$tech_archaeoshield_desc$"
  SMALL_ARCHAEO_SHIELD:0 "$ARCHAEO_SHIELD$ เล็ก"
@@ -884,7 +884,7 @@
  LARGE_ARCHAEO_ARMOR_DESC:0 "$tech_archaeoarmor_desc$"
  tt_LARGE_ARCHAEO_ARMOR_AP:0 "[GetArchaeoengineersEffectLargeArmor]"
  tt_LARGE_ARCHAEO_ARMOR:0 "From §Y$ap_archaeoengineers$§!:\nShield Hit Points: §G+450§!"
- STARBASE_AURA_ZRONI_STORM:0 "Zroni Storm Caster: Polarisation Module"
+ STARBASE_AURA_ZRONI_STORM:0 "Zroni Storm Caster: Polarization Module"
  STARBASE_AURA_ZRONI_STORM_DESC:0 "Controlling the Storm's general polarity allows to increase its power to dangerous levels for any unprepared vessel while maintaining safe conditions for our own."
  aura_starbase_zroni_storm:0 "$STARBASE_AURA_ZRONI_STORM$"
  SHIP_AURA_DETECTION_SCRAMBLER:0 "$tech_archaeo_detection_scrambler$"
@@ -893,7 +893,7 @@
  ARCHAEO_TITAN_BEAM_DESC:0 "$tech_archaeo_titan_beam_tech$"
  ARCHAEO_BEAM_TITAN:0 "$tech_archaeo_titan_beam$"
  PLANET_KILLER_DEVOLUTION:0 "$tech_archaeo_pk_devolving_beam$"
- PLANET_KILLER_DEVOLUTION_DESC:0 "$tech_archaeo_pk_devolving_beam_desc$"
+ PLANET_KILLER_DEVOLUTION_DESC:1 "$tech_archaeo_pk_devolving_beam_desc$"
  PLANET_KILLER_DEVOLVER:0 "$tech_archaeo_pk_devolving_beam$"
  PLANET_KILLER_DEVOLVER_DESC:0 "$PLANET_KILLER_DEVOLUTION_DESC$"
  ARCHAEO_LASER:0 "$tech_archaeo_lasers$"
