--- a/mod/thmod/localisation/english/marauder_l_english.yml
+++ b/mod/thmod/localisation/english/marauder_l_english.yml
@@ -59,7 +59,7 @@
  greatkhan_diplo_header:0 "[raider_khanate.GetRulerTitle] [raider_khanate.GetRulerName]"
  marauder.19.desc_01:0 "The [Root.GetName] is a perversion of nature. Your... "Hive Mind" or whatever you wish to call the obscenity that lords over your domain has no concept of honor. It represents everything that is wrong in this galaxy.\n\nThe warriors of the [marauder_country_1.GetSpeciesNamePlural] will have nothing to do with you."
  marauder.19.desc_02:0 "The [Root.GetName] is nothing but a pack of savage animals. Your senseless slaughter of innocents is enough to make even our hardiest warriors sick.\n\nWe will have no dealings with you."
- marauder.19.desc_03:0 "Ah yes, the talking machines. Where are your owners, machine? Are they aware that you are malfunctioning?\n\nAlthough there is no honor in it, our warriors will gladly use you for target practise if you approach our territory. Now be gone from my sight."
+ marauder.19.desc_03:0 "Ah yes, the talking machines. Where are your owners, machine? Are they aware that you are malfunctioning?\n\nAlthough there is no honor in it, our warriors will gladly use you for target practice if you approach our territory. Now be gone from my sight."
  marauder.19.2.desc_01:0 "HYEEEIIIEEEE!!! The hive-dwamak that eats everything! You not turn us into stew, that for sure! Be gone, hive-dwamak!"
  marauder.19.2.desc_02:0 "HYEEIIEEEE!!! We like bashing, but not like you! You like it too much, dwamak! We no talk to you!"
  marauder.19.2.desc_03:0 "HYEEEIIIEEE!!! Can... can it understand? It killing machine, yes? It only kills?\n\nMachine... kill self! You ordered to kill self!\n\nAh, it broken. No use."
@@ -100,8 +100,8 @@
  marauder.20.f.response:0 "HYEEEIIEEEE!!!! What... what shrieking?"
  marauder.20.g:0 "เราอยากจะจ้างหัวหน้า"
  hire_mercenary_leader:0 "Hire a skilled [marauder_species.GetName] leader for the duration of that leader's life."
- hire_admiral_merc:0 "\nคุณจ้างนายพลผู้เชี่ยวชาญ [marauder_species.GetName] แบบถาวร"
- hire_general_merc:0 "\nคุณจ้างนายพลผู้เชี่ยวชาญ [marauder_species.GetName] แบบถาวร"
+ hire_admiral_merc:0 "\nคุณจ้างพลเรือเอกผู้เชี่ยวชาญ [marauder_species.GetName] แบบถาวร"
+ hire_general_merc:0 "\nคุณจ้างพลเอกผู้เชี่ยวชาญ [marauder_species.GetName] แบบถาวร"
  marauder.30.e:0 "ไม่มีอะไร"
  marauder.30.f:0 "ลาก่อน"
  marauder.31.1.desc:0 "Ha! So you would have us raid one of your rivals?\n\nWe are loathe to get involved in your petty disputes, but with the proper incentives, I suppose it could be arranged...\n\nWho is it that you want us to attack?"
@@ -156,8 +156,8 @@
  marauder.40.1.desc:0 "Yes, this can be arranged. Many of our greatest warriors are searching for new challenges and opportunities.\n\nIf you can afford the blood price to release them from their sworn service to their kinfolk, they will gladly swear an oath to follow you and fight your battles."
  marauder.40.2.desc:0 "HYEEEIIIEEEEEEE!! Yes, yes! Many smart [marauder_species.GetName] warriors glad to fight for dwamak moolah! Only need right incentive."
  marauder.40.3.desc:0 "Yes, our greatest warriors are willing to lead your soldiers into battle. With the support of your energy credits, we will be able to serve Her with even greater fervor.\n\nYou will find that a lifetime of serving She of the Void has made our officers both fearless and effective."
- marauder.40.1.a:0 "จ้างนายพลกองยานรบ"
- marauder.40.2.a:0 "จ้างนายพลภาคพื้นดิน"
+ marauder.40.1.a:0 "จ้างพลเรือเอก"
+ marauder.40.2.a:0 "จ้างพลเอก"
  marauder.40.a.response:0 "Very good. The oath has been sworn, and the warrior is yours to do with as you will."
  marauder.40.b.response:0 "Oooh! This [marauder_species.GetName] very cunning! You lucky, [Root.GetSpeciesNamePlural]!"
  marauder.40.c.response:0 "She of the Void has blessed the sealing of this contract. May our champion serve you well."
@@ -166,14 +166,12 @@
  marauder.46.a:0 "Good mercenaries are hard to find."
  leader_trait_mercenary_warrior:0 "นักรบรับจ้าง"
  leader_trait_mercenary_warrior_desc:0 "This leader hails from a space-based warrior culture, and has been taught unorthodox hit-and-run tactics from an early age."
- leader_trait_general_mercenary_warrior:0 "$leader_trait_mercenary_warrior$"
- leader_trait_general_mercenary_warrior_desc:0 "$leader_trait_mercenary_warrior_desc$"
  leader_trait_great_khan:0 "ข่านผู้ยิ่งใหญ่"
  leader_trait_great_khan_desc:0 "The Great Khan is a charismatic leader, a brilliant tactician, and, if the rumors are true, a powerful psychic."
  leader_trait_ruler_great_khan:0 "$leader_trait_great_khan$"
  leader_trait_ruler_great_khan_desc:0 "$leader_trait_great_khan_desc$"
  marauder.50.name:0 "สัญญารับจ้างสิ้นสุดลง"
- marauder.50.desc:0 "สัญญาของเรากับทหารรับจ้าง §H[Root.GetName]§! สิ้นสุดลงแล้ว หัวหน้าของพวกเขา นายพล [Root.Leader.GetName] ได้เสนอที่จะขยายการบริการ ของยานรบในทันที ภายใต้คำสั่งเขาให้เราอีกห้าปี... โดยมีค่าใช้จ่ายเพิ่มเติม\n\nหากเราปฏิเสธ ทหารรับจ้างก็จะไปหางานทำที่อื่น"
+ marauder.50.desc:0 "สัญญาของเรากับทหารรับจ้าง §H[Root.GetName]§! สิ้นสุดลงแล้ว หัวหน้าของพวกเขา พลเรือเอก [Root.Leader.GetName] ได้เสนอที่จะขยายการบริการ ของยานรบในทันที ภายใต้คำสั่งเขาให้เราอีกห้าปี... โดยมีค่าใช้จ่ายเพิ่มเติม\n\nหากเราปฏิเสธ ทหารรับจ้างก็จะไปหางานทำที่อื่น"
  marauder.50.a:0 "ต่อสัญญา"
  marauder.50.b:0 "ให้พวกเขาไป"
  marauder.71.name:0 "Mercenary Admiral Replaced"
