--- a/mod/thmod/localisation/english/messages_l_english.yml
+++ b/mod/thmod/localisation/english/messages_l_english.yml
@@ -12,20 +12,20 @@
  MESSAGE_ARMY_RECRUITMENT:0 "Recruitment of armies has been completed on $PLANET|Y$."
  MESSAGE_POP_CONSTRUCTION_MESSAGE_TYPE_TITLE:0 "$MESSAGE_CONSTRUCTION_MESSAGE_TYPE_TITLE$"
  MESSAGE_POP_CONSTRUCTION_FINISH:0 "Pop construction has been completed on $PLANET|Y$."
- MESSAGE_FLEET_ORDER_FINISH_BUILD_ORBITAL_STATION:0 "§H$FLEET$§! เสร็จสิ้นการก่อสร้าง $SHIPCLASS|Y$ ในวงโคจรของดาว $PLANET|Y$"
- MESSAGE_FLEET_ORDER_ANOMALY:0 "§H$FLEET$§! ได้ค้นพบ §Hความผิดปกติ§! บนดาว $PLANET|Y$"
- MESSAGE_FLEET_ORDER_FINISH_BUILD_SPACE_STATION:0 "§H$FLEET$§! เสร็จสิ้นการก่อสร้าง $SHIPCLASS|Y$ ใน $STAR|Y$"
- MESSAGE_FLEET_ORDER_ANALYZE_FAIL:0 "§H$FLEET$§! has failed to analyze the FTL trail."
- MESSAGE_FLEET_ORDER_ANALYZE_FINISH:0 "§H$FLEET$§! has analyzed the FTL trail."
+ MESSAGE_FLEET_ORDER_FINISH_BUILD_ORBITAL_STATION:1 "§Y$FLEET$§! เสร็จสิ้นการก่อสร้าง $SHIPCLASS|H$ ในวงโคจรของดาว $PLANET|Y$"
+ MESSAGE_FLEET_ORDER_ANOMALY:1 "§Y$FLEET$§! ได้ค้นพบ §Hความผิดปกติ§! บนดาว $PLANET|Y$"
+ MESSAGE_FLEET_ORDER_FINISH_BUILD_SPACE_STATION:1 "§Y$FLEET$§! เสร็จสิ้นการก่อสร้าง $SHIPCLASS|Y$ ใน $STAR|Y$"
+ MESSAGE_FLEET_ORDER_ANALYZE_FAIL:1 "§Y$FLEET$§! ล้มเหลวในการวิเคราะห์เส้นทาง FTL"
+ MESSAGE_FLEET_ORDER_ANALYZE_FINISH:1 "§Y$FLEET$§! ได้วิเคราะห์เส้นทาง FTL"
  MESSAGE_FLEET_SYSTEM_FULLY_SURVEYED:0 "ระบบ $SYSTEM|Y$ ได้รับการสำรวจทั้งหมดแล้ว"
- MESSAGE_FLEET_ORDER_FINISH_MESSAGE_TYPE_TITLE:0 "Fleet Order Finished"
- MESSAGE_SYSTEM_SURVEYED_TITLE:0 "สำรวจระบบโดยละเอียดแล้ว"
+ MESSAGE_FLEET_ORDER_FINISH_MESSAGE_TYPE_TITLE:0 "คำสั่งกองยานเสร็จสิ้น"
+ MESSAGE_SYSTEM_SURVEYED_TITLE:1 "สำรวจระบบโดยละเอียดแล้ว"
  AUTO_EXPLORE_CANCELED_MESSAGE_TYPE_TITLE:0 "คำสั่งของยานถูกยกเลิก"
- MESSAGE_FLEET_ORDER_AUTO_EXPLORE_CANCELED:1 "§H$FLEET$§! ยกเลิกคำสั่งสำรวจอัตโนมัติ ไม่สามารถเข้าถึงหรือค้นหาระบบอื่นที่ไม่ได้สำรวจได้"
+ MESSAGE_FLEET_ORDER_AUTO_EXPLORE_CANCELED:3 "§Y$FLEET$§! ยกเลิกคำสั่งอัตโนมัติของยานวิจัยวิทยาศาสตร์ ไม่สามารถเข้าถึงหรือหางานอื่นๆเพื่อดำเนินการได้"
  AUTO_EXPLORE_FALLBACK_MESSAGE_TYPE_TITLE:0 "ยานถอยกลับไปสำรวจที่ใหม่"
- MESSAGE_FLEET_ORDER_AUTO_EXPLORE_FALLBACK:0 "§H$FLEET$§! ไม่สามารถเข้าถึงระบบดาวใดๆ ที่ยังไม่ได้สำรวจได้ แต่จะพยายามสำรวจค้นหาระบบเพิ่มเติม"
+ MESSAGE_FLEET_ORDER_AUTO_EXPLORE_FALLBACK:1 "§Y$FLEET$§! ไม่สามารถเข้าถึงระบบดาวใดๆ ที่ยังไม่ได้สำรวจได้ แต่จะพยายามสำรวจค้นหาระบบเพิ่มเติม"
  FLEET_BUILD_ORDER_CANCELED_MESSAGE_TYPE_TITLE:0 "$AUTO_EXPLORE_CANCELED_MESSAGE_TYPE_TITLE$"
- MESSAGE_FLEET_BUILD_ORDER_CANCELED_MESSAGE:0 "$FLEET|H$ ไม่สามารถสร้าง $STATION|H$ ในระบบดาว $SYSTEM|H$ ได้, รับทรัพยากรคืนแล้ว"
+ MESSAGE_FLEET_BUILD_ORDER_CANCELED_MESSAGE:1 "$FLEET|Y$ ไม่สามารถสร้าง $STATION|H$ ในระบบดาว $SYSTEM|Y$ ได้, รับทรัพยากรคืนแล้ว"
  MESSAGE_BYPASS_EXPLORED:0 "รูหนอนที่สำรวจแล้ว"
  BYPASS_EXPLORED_MESSAGE:0 "รูหนอนในระบบดาว $SYSTEM1|Y$ ได้รับการสำรวจแล้ว มันเชื่อมต่อกับระบบดาว $SYSTEM2|Y$"
  MESSAGE_ESN_ARRIVED_TITLE:0 "นำทางด้วยการทดลองทางลัดอวกาศ"
@@ -57,8 +57,8 @@
  ACTION_FORM_FEDERATION_VOTE_PASSED:0 "The §H[Actor.GetAllianceName]§! voted to form a Federation."
  ACTION_FORM_FEDERATION_VOTE_FAILED:0 "The vote to form a federation failed."
  ACTION_RELEASE_SUBJECT_PASSED:0 "§H[Actor.GetName]§! has released us from being a Subject."
- ACTION_OFFER_PEACE_VOTE_PASSED:0 "The §H[Actor.GetAllianceName]§! voted to accept sigining peace offer with §H[Recipient.GetName]§!."
- ACTION_OFFER_PEACE_VOTE_FAILED:0 "The §H[Actor.GetAllianceName]§! voted to reject sigining peace offer with §H[Recipient.GetName]§!."
+ ACTION_OFFER_PEACE_VOTE_PASSED:0 "The §H[Actor.GetAllianceName]§! voted to accept signing a peace offer with §H[Recipient.GetName]§!."
+ ACTION_OFFER_PEACE_VOTE_FAILED:0 "The §H[Actor.GetAllianceName]§! voted to reject signing a peace offer with §H[Recipient.GetName]§!."
  MESSAGE_TRADE_DEAL_END_MISSING_RESOURCE_TITLE:0 "Trade Deal Ended, We Lack Resources"
  MESSAGE_TRADE_DEAL_END_MISSING_RESOURCE_THEM_TITLE:0 "Trade Deal Ended, They Lack Resources"
  MESSAGE_TRADE_DEAL_END_CANCELLED_ACTION_TITLE:0 "Trade Deal Ended, Trade Action Not Valid"
@@ -240,8 +240,8 @@
  MESSAGE_DIPLOMACY_TITLE:0 "การทูต"
  ACTION_FORM_FEDERATION_PROPOSAL_FAILED_RECIPIENT:0 "$ACTION_INVITE_TO_ALLIANCE_PROPOSAL_FAILED_RECIPIENT$"
  ACTION_FORM_FEDERATION_PROPOSAL_FAILED_ACTOR:0 "$ACTION_INVITE_TO_ALLIANCE_PROPOSAL_FAILED_ACTOR$"
- SURRENDER_OUR_SIDE:0 "Our warleader has surrendered unconditionally, cease fire has been established. The enemy has up to six months to place their demands."
- SURRENDER_THEIR_SIDE:0 "Their warleader has surrendered unconditionally, cease fire has been established. We now have six months to decide our demands."
+ SURRENDER_OUR_SIDE:0 "Our war leader has surrendered unconditionally, cease fire has been established. The enemy has up to six months to place their demands."
+ SURRENDER_THEIR_SIDE:0 "Their war leader has surrendered unconditionally, cease fire has been established. We now have six months to decide our demands."
  WAR_END_VICTORY:0 "เราชนะสงครามแล้ว"
  WAR_END_DEFEAT:0 "เราแพ้สงครามครั้งนี้"
  WAR_END_STATUS_QUO:0 "สงครามสิ้นสุดลงด้วยสถานะปัจจุบัน"
@@ -252,7 +252,7 @@
  MESSAGE_ALLIED_ENTERED_WAR:1 "The $ATTACKER|Y$ has declared war on our ally, the $CALLER|Y$.\n\nConsequently, we are now §Yat war§! with the $ATTACKER|Y$!"
  MESSAGE_GUARANTEED_ENTERED_WAR:0 "Guaranteed is under attack"
  MESSAGE_GUARANTEER_ENTERED_WAR_DESC:1 "The $ATTACKER|Y$ has declared war on $CALLER|Y$, whose independence we have guaranteed.\n\nConsequently, we are now §Yat war§! with the $ATTACKER|Y$!"
- MESSAGE_GUARANTEER_ENTERED_WAR_TITLE:0 "Guaranteer Entered War"
+ MESSAGE_GUARANTEER_ENTERED_WAR_TITLE:0 "Guarantor Entered War"
  MESSAGE_ALLIED_ENTERED_WAR_TITLE:0 "Ally Entered War"
  MESSAGE_OVERLORD_ENTERED_WAR_TITLE:0 "Overlord Entered War"
  MESSAGE_OVERLORD_ENTERED_WAR_DESC:1 "The $ATTACKER|Y$ has declared war on our Overlord, the $CALLER|Y$.\n\nConsequently, we are now §Yat war§! with the $ATTACKER|Y$!"
@@ -284,15 +284,16 @@
  MESSAGE_FLEET_EVADE_HOSTILE:0 "$FLEET$ ได้เจอกับกองยานศัตรู $HOSTILE|R$ ในระบบดาว $SYSTEM|H$ และกำลังพยายามหลบเลี่ยงพวกมันอยู่!"
  MESSAGE_FLEET_EVADE_HOSTILE_FLEET_TYPE:0 "$TYPE$ $NAME|H$"
  MESSAGE_FLEET_EVADE_HOSTILE_MESSAGE_TYPE_TITLE:0 "กำลังหลบเลี่ยงกองยานศัตรู"
- FLEET_LEADER_DEATH:0 "$CLASS|Y$ $LEADER|Y$ ตายเมื่อ $SHIP|Y$ ถูกทำลาย"
- ARMY_LEADER_DEATH:0 "$CLASS|Y$, $LEADER|Y$ ของเราตายขณะบัญชาการ $ARMY|Y$"
- PLANET_LEADER_DEATH:0 "$CLASS|Y$, $LEADER|Y$ ของเราตายที่ดาว $PLANET|Y$"
- COUNTRY_LEADER_DEATH:0 "$CLASS|Y$, $LEADER|Y$ ของเราตาย!"
- HEIR_DEATH:0 "§Y$HEIR$§!, $HEIRNAME|Y$ ของเราตาย!"
+ FLEET_LEADER_DEATH:1 "$CLASS|H$ $LEADER|Y$ ตายเมื่อ $SHIP|Y$ ถูกทำลาย"
+ ARMY_LEADER_DEATH:1 "$CLASS|H$, $LEADER|Y$ ของเราตายขณะบัญชาการ $ARMY|Y$"
+ PLANET_LEADER_DEATH:1 "$CLASS|H$, $LEADER|Y$ ของเราตายที่ดาว $PLANET|Y$"
+ COUNTRY_LEADER_DEATH:1 "$CLASS|H$, $LEADER|Y$ ของเราตาย!"
+ HEIR_DEATH:1 "§H$HEIR$§!, $HEIRNAME|Y$ ของเราตาย!"
  RULER_ELECTED:0 "เลือกผู้ปกครองคนใหม่แล้ว! $TITLE$ $LEADER|Y$ จะปกครองไปจนถึงการเลือกตั้งครั้งต่อไป ซึ่งจะเกิดขึ้นใน $TIME|Y$"
  RULER_ELECTED_UNTIL_DEATH:1 "$TITLE$ $LEADER|Y$ ได้รับเลือกให้เป็นผู้ปกครองคนใหม่ และจะครองตำแหน่งไปจนตาย"
  RULER_ELECTED_HEIR:1 "As per the order of succession, $TITLE$ $LEADER|Y$ is the new Ruler."
  MESSAGE_LEADER_DEATH_TITLE:0 "ผู้นำเสียชีวิต"
+ MESSAGE_LEADER_RETIRED_TITLE:0 "ผู้นำเกษียณ"
  MESSAGE_RULER_ELECTED_TITLE:0 "ผู้ปกครองได้รับเลือก"
  MESSAGE_RULER_ELECTED_UNTIL_DEATH_TITLE:0 "ผู้ปกครองได้รับเลือก"
  MESSAGE_RULER_ELECTED_HEIR_TITLE:0 "ครองราชย์สำเร็จ"
@@ -301,10 +302,11 @@
  MESSAGE_OLIGARCHIC_ELECTION_DESC:0 "การเจรจาเพื่อแต่งตั้ง$TITLE$ใหม่กำลังดำเนินอยู่\nการตัดสินใจจะประกาศในวันที่ $DATE|Y$"
  ELECTION_CLICK_FOR_MORE_INFO:0 "คลิกเพื่อดูข้อมูลเพิ่มเติม"
  LEADER_DEATH_AGE:0 "$CLASS|Y$ $LEADER|Y$ เสียชีวิตเมื่ออายุได้ $AGE|Y$ ปี"
+ LEADER_RETIRED_DESC:0 "$CLASS|Y$ $LEADER|Y$ เกษียณเมื่ออายุ $AGE|Y$"
  TOOLTIP_KILL_LEADER:0 "$CLASS|Y$ $LEADER|Y$ §Rตาย§!"
  MESSAGE_LEADER_EXPERIENCE_TITLE:0 "ผู้นำได้รับประสบการณ์"
  LEADER_EXPERIENCE_NOTIFICATION_DESC:0 "§T$CLASS|Y$ $LEADER|Y$ gained experience from combat\n\n$STATS$§!"
- MESSAGE_LEADER_LEVEL_UP_TITLE:0 "ผู้นำได้เลเวลใหม่"
+ MESSAGE_LEADER_LEVEL_UP_TITLE:1 "ผู้นำเลเวลอัป"
  LEADER_LEVEL_UP_DESC:0 "$CLASS|Y$ $LEADER|Y$ เลเวลอัป\n\nสกิล: $LEVEL|Y$\n"
  LEADER_LEVEL_UP_NEXT_LEVEL_DESC:0 "$CLASS|Y$ $LEADER|Y$ เลเวลอัป\n\nสกิล: $LEVEL|Y$\nประสบการณ์ที่จำเป็นสำหรับเลเวลต่อไป: $EXP|Y0$"
  LEADER_ADMIRAL_BASE_EXPERIENCE:0 "§TFleet Engagement: $VAL|0H$ experience§!"
@@ -315,6 +317,9 @@
  LEADER_GENERAL_FRIENDLY_LOST_EXPERIENCE:0 "§TFriendly Forces Lost: $VAL|0H$ experience§!"
  MESSAGE_NEW_HEIR_TITLE:0 "§Hรัชทายาทคนใหม่§!"
  NEW_HEIR_TEXT:0 "§Y$HEIR$§! เป็นรัชทายาทคนใหม่ของจักรวรรดิและจะครองบัลลังก์เมื่อผู้ปกครองคนปัจจุบันของเราสิ้นพระชนม์"
+ MESSAGE_LEADER_POOL_REFRESHED_MESSAGE_TYPE_TITLE:0 "กลุ่มผู้นำถูกรีเฟรช"
+ LEADER_POOL_REFRESHED_TITLE:0 "กลุ่มผู้นำจักรวรรดิของคุณได้รับการรีเฟรชแล้ว คุณมีผู้นำคนใหม่ที่คุณสามารถจ้างได้"
+ LEADER_POOL_REFRESHED_INSTRUCTION:0 "คลิกเพื่อเปิดดูผู้นำ"
  MESSAGE_TECHNOLOGY_RESEARCH_FINISH:0 "เราได้เสร็จสิ้นการวิจัย $TECHNOLOGY|H$"
  MESSAGE_TECHNOLOGY_ORDER_FINISH_MESSAGE_TYPE_TITLE:0 "วิจัยเทคโนโลยีเสร็จแล้ว"
  MESSAGE_DEBRIS_ANALYZED_FINISH:0 "เราได้วิเคราะห์ซากในระบบ $SYSTEM|Y$ แล้ว"
@@ -365,12 +370,12 @@
  SPECIAL_PROJECT_AVAILABLE:0 "โครงการพิเศษสำหรับการวิจัย"
  MESSAGE_EVENT_MESSAGE_TYPE_TITLE:0 "เหตุการณ์"
  MESSAGE_INVASION_TITLE:0 "การบุกได้จบลงแล้ว"
- MESSAGE_INVASION_ATTACKER_WIN:0 "เราบุก $PLANET|H$! ได้สำเร็จ"
+ MESSAGE_INVASION_ATTACKER_WIN:1 "เราบุก $PLANET|Y$! ได้สำเร็จ"
  MESSAGE_INVASION_ATTACKER_LOSE:0 "การบุกรุก $PLANET|H$ ของเราล้มเหลว"
- MESSAGE_INVASION_DEFENDER_WIN:0 "We successfully fended off the invaders on $PLANET|H$!"
- MESSAGE_INVASION_DEFENDER_LOSE:0 "We failed to fend off the invaders on $PLANET|H$."
+ MESSAGE_INVASION_DEFENDER_WIN:1 "We successfully fended off the invaders on $PLANET|Y$!"
+ MESSAGE_INVASION_DEFENDER_LOSE:1 "We failed to fend off the invaders on $PLANET|Y$."
  MESSAGE_RETREAT_CASUALTIES_TITLE:0 "Retreating Armies Lost"
- RETREAT_CASUALTIES_DESC:0 "We lost $NUM|Y$ of our $TOTAL|Y$ armies while attempting to retreat from $PLANET|H$\n$LOST$"
+ RETREAT_CASUALTIES_DESC:1 "We lost $NUM|Y$ of our $TOTAL|Y$ armies while attempting to retreat from $PLANET|Y$\n$LOST$"
  MESSAGE_LOST_ARMY:0 "$NUMBER$. $NAME|R$"
  MESSAGE_SUBJECT_TYPE_CHANGED_TITLE:0 "เปลี่ยนสถานะของบริวารแล้ว"
  MESSAGE_SUBJECT_CHANGED_DESC:0 "$REASON$$SUBJECT|Y$ ตอนนี้คือ $NEW_TYPE|Y$ ภายใต้ $OVERLORD|Y$"
@@ -387,11 +392,11 @@
  COUNTRY_EDICT_EXPIRED:0 "The $EDICT|Y$ Edict affecting our empire has expired."
  PLANET_EDICT_EXPIRED:0 "The $EDICT|Y$ Edict affecting $PLANET$ has expired."
  MESSAGE_MEGASTRUCTURE_BUILT_TITLE:0 "Megastructure Built"
- MESSAGE_MEGASTRUCTURE_BUILT:3 "Completed construction of the $MEGASTRUCTURE|H$ in the $SYSTEM|H$ system."
+ MESSAGE_MEGASTRUCTURE_BUILT:4 "Completed construction of the $MEGASTRUCTURE|H$ in the $SYSTEM|Y$ system."
  MESSAGE_MEGASTRUCTURE_UPGRADED_TITLE:0 "Megastructure Upgraded"
- MESSAGE_MEGASTRUCTURE_UPGRADED:2 "Completed upgrading the $MEGASTRUCTURE|H$ in the $SYSTEM|H$ system."
- MESSAGE_ALIEN_MEGASTRUCTURE_BUILT_TITLE:0 "เอเลี่ยนสร้างสิ่งก่อสร้างขนาดใหญ่"
- MESSAGE_ALIEN_MEGASTRUCTURE_BUILT:0 "$COUNTRY|H$ ได้สร้าง $MEGASTRUCTURE|H$ ของพวกเขาในระบบดาว $SYSTEM|H$ เสร็จเรียบร้อยแล้ว"
+ MESSAGE_MEGASTRUCTURE_UPGRADED:3 "Completed upgrading the $MEGASTRUCTURE|H$ in the $SYSTEM|Y$ system."
+ MESSAGE_ALIEN_MEGASTRUCTURE_BUILT_TITLE:0 "เอเลี่ยนสร้างสิ่งก่อสร้างขนาดมหึมา"
+ MESSAGE_ALIEN_MEGASTRUCTURE_BUILT:1 "$COUNTRY|Y$ ได้สร้าง $MEGASTRUCTURE|H$ ในระบบดาว $SYSTEM|Y$"
  MESSAGE_NEW_CASUS_BELLI_HOLDER_TITLE:1 "มีเหตุแห่งสงครามใหม่"
  MESSAGE_NEW_CASUS_BELLI_HOLDER:1 "เราสามารถใช้เหตุแห่งสงคราม ($CASUS_BELLI|H$) กับ $COUNTRY|H$"
  MESSAGE_NEW_CASUS_BELLI_TARGET_TITLE:1 "เหตุแห่งสงคราม"
@@ -400,6 +405,6 @@
  MESSAGE_LOST_CASUS_BELLI_TITLE:0 "เสียเหตุแห่งสงคราม"
  MESSAGE_LOST_CASUS_BELLI:1 "เราไม่สามารถใช้เหตุแห่งสงคราม $CASUS_BELLI|H$ กับ $COUNTRY|H$ ได้อีกต่อไป"
  MESSAGE_NEW_CLAIM_ON_SYSTEM_TITLE:1 "จักรวรรดิอื่นอ้างสิทธิ์ในระบบดาวของเรา"
- MESSAGE_NEW_CLAIM_ON_SYSTEM:1 "แม้ว่าจะเป็นของเราโดยชอบธรรม แต่ $COUNTRY|H$ ยังคงอ้างสิทธิ์ในระบบดาว $SYSTEM|H$!"
+ MESSAGE_NEW_CLAIM_ON_SYSTEM:2 "แม้ว่าจะเป็นของเราโดยชอบธรรม แต่ $COUNTRY|Y$ ยังคงอ้างสิทธิ์ในระบบดาว $SYSTEM|Y$!"
  MESSAGE_STAR_DESTROYED:0 "ระบบดาวถูกทำลาย"
  MESSAGE_STAR_DESTROYED_DESC:1 "A massive supernova triggered by $ADJ$ §RStar-Eater§! has destroyed the $PLANET|Y$ system."
