--- a/mod/thmod/localisation/english/modifiers_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_l_english.yml
@@ -12,6 +12,7 @@
  MOD_COUNTRY_PIRACY_RISK_MULT:0 "ความเสี่ยงจากการปล้นสะดม"
  MOD_COUNTRY_FORTIFICATION_STRENGTH:0 "Fortification Toughness"
  MOD_COUNTRY_BORDER_MULT:0 "ระยะของขอบแดน"
+ MOD_COUNTRY_ENERGY_GAIN_ADD:0 "พลังงานรายเดือน"
  MOD_COUNTRY_INFLUENCE_GAIN_ADD:0 "อิทธิพลรายเดือน"
  MOD_COUNTRY_INFLUENCE_GAIN_MULT:0 "อิทธิพลรายเดือน"
  MOD_COUNTRY_DEFENSIVE_WAR_INFLUENCE_GAIN_ADD:0 "อิทธิพลรายเดือน (สงครามป้องกัน)"
@@ -35,17 +36,19 @@
  MOD_COUNTRY_EDICT_FUND_MULT:0 "$MOD_COUNTRY_EDICT_FUND_ADD$"
  mod_edicts_upkeep_mult:0 "ค่าบำรุงรักษาประกาศคำสั่ง"
  MOD_COUNTRY_ALL_TECH_RESEARCH_SPEED:0 "ความเร็วในการวิจัย"
- MOD_COUNTRY_PHYSICS_TECH_RESEARCH_SPEED:0 "ความเร็วในการวิจัย (£physics£ ฟิสิกส์)"
- MOD_COUNTRY_SOCIETY_TECH_RESEARCH_SPEED:0 "ความเร็วในการวิจัย (£society£ สังคม)"
- MOD_COUNTRY_ENGINEERING_TECH_RESEARCH_SPEED:0 "ความเร็วในการวิจัย (£engineering£ วิศวกรรม)"
+ MOD_COUNTRY_PHYSICS_TECH_RESEARCH_SPEED:1 "ความเร็วในการวิจัย (£physics£ §Yฟิสิกส์§!)"
+ MOD_COUNTRY_SOCIETY_TECH_RESEARCH_SPEED:1 "ความเร็วในการวิจัย (£society£ §Yสังคม§!)"
+ MOD_COUNTRY_ENGINEERING_TECH_RESEARCH_SPEED:1 "ความเร็วในการวิจัย (£engineering£ §Yวิศวกรรม§!)"
  MOD_COUNTRY_MINING_STATION_COST_MULT:0 "ค่าสถานีขุด"
  MOD_COUNTRY_RESEARCH_STATION_COST_MULT:0 "ค่าสถานีวิจัย"
  MOD_COUNTRY_SHIP_UPGRADE_COST_MULT:0 "ค่าใช้จ่ายในการอัปเกรดยาน"
  MOD_COUNTRY_LEADER_POOL_SIZE:0 "จำนวนผู้นำที่สามารถเลือกได้ (ตอนเลือกจ้าง)"
+ MOD_COUNTRY_EXTERNAL_LEADER_POOL_SIZE:0 "ขนาดกลุ่มผู้นำจากภายนอก"
  MOD_COUNTRY_CORE_SECTOR_SYSTEM_CAP:0 "ระบบของเซ็กเตอร์แกนกลาง"
  MOD_COUNTRY_SECTOR_CAP_ADD:0 "ขีดจำกัดของเซ็กเตอร์"
  mod_country_base_energy_produces_mult:0 "การสร้างพลังงานของจักรวรรดิ"
  mod_country_base_minerals_produces_mult:0 "การผลิตแร่ของจักรวรรดิ"
+ MOD_ASSIST_RESEARCH_MULT:1 "ช่วยเพิ่มประสิทธิภาพการวิจัย"
  MOD_COUNTRY_NUM_TECH_ALTERNATIVES_ADD:0 "ทางเลือกในการวิจัย"
  MOD_COUNTRY_PREVIOUS_DEALS:0 "ตกลงก่อนหน้า"
  MOD_COUNTRY_INSULT_EFFICIENCY:0 "ประสิทธิภาพในการดูถูกเหยียดหยาม"
@@ -59,6 +62,7 @@
  MOD_POP_CONSUMER_GOODS_MULT:0 "ค่าใช้จ่ายสินค้าอุปโภคบริโภค"
  MOD_POP_CONSUMER_GOODS_ADD:0 "ใช้สินค้าอุปโภคบริโภค"
  MOD_POP_DEFENSE_ARMIES_ADD:1 "กองทัพป้องกันดาวเคราะห์ต่อประชากร"
+ MOD_DEFENSE_ARMIES_ADD:0 "กองทัพป้องกันดาวเคราะห์"
  MOD_POP_HOUSING_USAGE_MULT:0 "การใช้ที่อยู่อาศัยประชากร"
  MOD_POP_HOUSING_USAGE_ADD:0 "$MOD_POP_HOUSING_USAGE_MULT$"
  MOD_POP_HOUSING_USAGE_BASE:0 "$MOD_POP_HOUSING_USAGE_MULT$"
@@ -67,10 +71,10 @@
  MOD_TECH_COST_EMPIRE_SIZE_MULT:1 "ค่าใช้จ่ายเทคโนโลยีจาก $EMPIRE_SIZE$"
  MOD_COLONY_START_NUM_POPS_ADD:0 "ประชากรพิเศษเมื่อสร้างอาณานิคม"
  MOD_COUNTRY_TERRAFORM_SPEED_MULT:0 "ความเร็วในการปรับสภาพดาว"
- MOD_MEGASTRUCTURE_BUILD_SPEED_MULT:0 "ความเร็วในการสร้างสิ่งก่อสร้างขนาดใหญ่"
- MOD_MEGASTRUCTURE_BUILD_SPEED_ADD:0 "ความเร็วในการสร้างสิ่งก่อสร้างขนาดใหญ่"
- MOD_MEGASTRUCTURE_PRODUCTION_MULT:0 "การผลิตทรัพยากรของสิ่งก่อสร้างขนาดใหญ่"
- MOD_MEGASTRUCTURE_BUILD_COST_MULT:0 "ค่าก่อสร่างสิ่งก่อสร้างขนาดใหญ่"
+ MOD_MEGASTRUCTURE_BUILD_SPEED_MULT:0 "ความเร็วในการสร้างสิ่งก่อสร้างขนาดมหึมา"
+ MOD_MEGASTRUCTURE_BUILD_SPEED_ADD:0 "ความเร็วในการสร้างสิ่งก่อสร้างขนาดมหึมา"
+ MOD_MEGASTRUCTURE_PRODUCTION_MULT:0 "การผลิตทรัพยากรของสิ่งก่อสร้างขนาดมหึมา"
+ MOD_MEGASTRUCTURE_BUILD_COST_MULT:0 "ค่าก่อสร่างสิ่งก่อสร้างขนาดมหึมา"
  MOD_DIPLO_WEIGHT_SPRAWL_MULT:1 "น้ำหนักทางการทูตจากขนาดจักรวรรดิ"
  MOD_DIPLO_WEIGHT_NAVAL_MULT:0 "น้ำหนักทางการทูตจากกำลังของยานรบ"
  MOD_DIPLO_WEIGHT_ECONOMY_MULT:0 "น้ำหนักทางการทูตจากเศรษฐกิจ"
@@ -87,6 +91,7 @@
  MOD_COUNTRY_SUBJECT_INFLUENCE_GAIN_MULT:0 "อิทธิพลจากบริวาร"
  MOD_COUNTRY_SUBJECT_ACCEPTANCE_ADD:0 "การยอมรับการเป็นเมืองขึ้น/บริวาร"
  MOD_MONTHLY_LOYALTY_GAIN:0 "การเปลี่ยนแปลงความภักดีรายเดือน"
+ MOD_MONTHLY_LOYALTY_GAIN_FROM_SUBJECTS:0 "ความภักดีต่อเดือนจากจักรวรรดิบริวาร"
  MOD_COUNTRY_FACTION_INFLUENCE_MULT:0 "ได้รับอิทธิพลจากกลุ่มการเมือง"
  MOD_COUNTRY_FACTION_INFLUENCE_ADD:0 "อิทธิพลสูงสุดที่ได้จากกลุ่มการเมือง"
  MOD_COUNTRY_CLEAR_BLOCKER_COST_MULT:0 "ค่าใช้จ่ายในการเคลียร์สิ่งกีดขวาง"
@@ -106,7 +111,7 @@
  MOD_COUNTRY_STARBASE_INFLUENCE_COST_DISTANCE_MULT:0 "Starbase Influence Distance Cost"
  MOD_COUNTRY_TRADE_FEE:0 "ค่าธรรมเนียมตลาด"
  MOD_COUNTRY_SLAVE_MARKET_COST_MULT:0 "ค่าใช้จ่ายตลาดค้าทาส"
- MOD_COUNTRY_MEGASTRUCTURE_BUILD_CAP_ADD:0 "ความจุของการสร้างสิ่งก่อสร้างขนาดใหญ่"
+ MOD_COUNTRY_MEGASTRUCTURE_BUILD_CAP_ADD:0 "ความจุของการสร้างสิ่งก่อสร้างขนาดมหึมา"
  MOD_COUNTRY_EDICT_CAP_ADD:0 "$EDICT_CAPACITY_TITLE$"
  MOD_COUNTRY_EDICT_CAP_MULT:0 "$EDICT_CAPACITY_TITLE$"
  MOD_EMPIRE_SIZE_MULT:0 "$empire_size_mods$"
@@ -151,7 +156,7 @@
  mod_pop_job_trade_mult:0 "£trade_value£ มูลค่าการค้าจาก £job£ งาน"
  mod_pop_lifestyle_trade_mult:0 "£trade_value£ มูลค่าการค้าจากมาตรฐานความเป็นอยู่"
  mod_pop_job_amenities_mult:0 "£amenities£ ความอยู่ดีกินดีจาก £job£ งาน"
- mod_job_soldier_stability_add:0 "เสถียรภาพจากงาน £job_soldier£ [GetSoldier]"
+ mod_job_soldier_stability_add:1 "เสถียรภาพจากงาน £job_soldier£ [GetSoldier] [GetSoldierPlural]"
  MOD_COUNTRY_COLONY_INFLUENCE_COST_MULT:0 "ค่าอิทธิพลที่ใช้ในอาณานิคม"
  MOD_COUNTRY_CLAIM_INFLUENCE_COST_MULT:0 "ค่าอิทธิพลที่ใช้ในการอ้างสิทธิ์"
  MOD_COUNTRY_HOSTILE_CLAIM_INFLUENCE_COST_MULT:0 "อิทธิพลที่ศัตรูใช้ในการอ้างสิทธิ์"
@@ -363,6 +368,8 @@
  MOD_PLANET_STABILITY_MULT:0 "$MOD_PLANET_STABILITY_ADD$"
  MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE:1 "พลังโจมตีจากการทิ้งระเบิดจากวงโคจร"
  MOD_SHIP_ORBITAL_BOMBARDMENT_MULT:0 "$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$"
+ MOD_SHIP_ORBITAL_BOMBARDMENT_ARMY_DAMAGE_MULT:0 "พลังโจมตีต่อกองทหารภาคพื้นจากการทิ้งระเบิดจากวงโคจร"
+ MOD_SHIP_ORBITAL_BOMBARDMENT_POP_DAMAGE_MULT:0 "พลังโจมตีต่อประชากรจากการทิ้งระเบิดจากวงโคจร"
  MOD_PLANET_ADD_SPACEPORT:0 "เพิ่มช่องก่อสร้างสำหรับสิ่งปลูกสร้างในวงโคจร"
  MOD_PLANET_SENSOR_RANGE_ADD:0 "ระยะของเซ็นเซอร์ดาวเคราะห์"
  MOD_PLANET_SENSOR_RANGE_MULT:0 "ระยะของเซ็นเซอร์ดาวเคราะห์"
@@ -373,7 +380,7 @@
  MOD_PLANET_BUILDING_COST_MULT:0 "ค่าใช้จ่ายสิ่งปลูกสร้าง"
  MOD_PLANET_BUILDING_COST_MULT_DESC:0 "Affects the resources needed to construct various buildings within the Empire, increasing or reducing the upfront cost."
  MOD_PLANET_BUILDING_UPKEEP_MULT:0 "ค่าบำรุงรักษาสิ่งปลูกสร้าง"
- MOD_PLANET_BUILDING_UPKEEP_MULT_DESC:0 "Affects the upkeep neded to maintain various buildings within the Empire."
+ MOD_PLANET_BUILDING_UPKEEP_MULT_DESC:0 "Affects the upkeep needed to maintain various buildings within the Empire."
  MOD_PLANET_CLEAR_BLOCKER_COST_MULT:0 "ค่าใช้จ่ายในการเคลียร์สิ่งกีดขวาง"
  MOD_PLANET_CLEAR_BLOCKER_COST_MULT_DESC:0 "Affects the resources required to clear a surface tile of a blocker."
  MOD_PLANET_MIGRATION_PULL_ADD:0 "การอพยพย้ายเข้าของดาวเคราะห์"
@@ -415,9 +422,9 @@
  mod_planet_buildings_factories_cost_mult:0 "ค่าใช้จ่ายโรงงาน"
  mod_planet_buildings_refineries_cost_mult:0 "ค่าใช้จ่ายโรงกลั่น"
  mod_planet_buildings_strongholds_cost_mult:0 "ค่าใช้จ่ายป้อมปราการ"
- mod_planet_metallurgists_upkeep_mult:0 "ค่าบำรุงรักษานักโลหะวิทยา"
- mod_planet_artisans_upkeep_mult:0 "ค่าบำรุงรักษาช่างฝีมือ"
- mod_planet_researchers_upkeep_mult:0 "ค่าบำรุงรักษานักวิจัย"
+ mod_planet_metallurgists_upkeep_mult:1 "ค่าบำรุงรักษา [GetAlloyProducer]"
+ mod_planet_artisans_upkeep_mult:1 "ค่าบำรุงรักษา [GetArtisan]"
+ mod_planet_researchers_upkeep_mult:1 "ค่าบำรุงรักษา [GetResearcher]"
  mod_planet_refiners_upkeep_mult:0 "ค่าบำรุงรักษานักสกัดแร่"
  mod_planet_chemists_upkeep_mult:0 "ค่าบำรุงรักษานักเคมี"
  mod_planet_translucers_upkeep_mult:0 "ค่าบำรุงรักษานักสกัดผลึกแร่หายาก"
@@ -460,23 +467,27 @@
  MOD_SHIP_EMERGENCY_FTL_MIN_DAYS_ADD:1 "เวลาคูลดาวน์ในการจั้มฉุกเฉิน FTL"
  MOD_SHIP_EMERGENCY_FTL_MIN_DAYS_MULT:0 "$MOD_SHIP_EMERGENCY_FTL_MIN_DAYS_ADD$"
  MOD_COUNTRY_FEDERATION_NAVAL_CAP_CONTRIBUTION_MULT:0 "การสนับสนุนความจุยานรบของกองยานสหพันธ์"
- MOD_COUNTRY_COMMAND_LIMIT_ADD:0 "ขีดจำกัดคำสั่งของกองยาน"
- MOD_COUNTRY_COMMAND_LIMIT_MULT:0 "$MOD_FLEET_COMMAND_LIMIT_ADD$"
+ MOD_COMMAND_LIMIT_ADD:0 "ขีดจำกัดคำสั่งของกองยาน"
+ MOD_COMMAND_LIMIT_MULT:0 "ขีดจำกัดคำสั่งของกองยาน"
  MOD_COUNTRY_NAVAL_COVERAGE_ADD:0 "$navy_coverage$"
  MOD_COUNTRY_NAVAL_COVERAGE_MULT:0 "$navy_coverage$"
  MOD_LEADER_RULER_SKILL_LEVELS:0 "เลเวลผู้ปกครองสูงสุด"
  MOD_LEADER_SKILL_LEVELS:0 "เลเวลผู้นำสูงสุด"
  MOD_LEADER_AGE:0 "อายุขัยผู้นำ"
- MOD_LEADER_ADMIRAL_SKILL_LEVELS:0 "เลเวลนายพลยานอวกาศสูงสุด"
- MOD_LEADER_GENERAL_SKILL_LEVELS:0 "เลเวลนายพลสูงสุด"
+ MOD_LEADER_ADMIRAL_SKILL_LEVELS:0 "เลเวลพลเรือเอกสูงสุด"
+ MOD_LEADER_GENERAL_SKILL_LEVELS:0 "เลเวลพลเอกสูงสุด"
  MOD_LEADER_GOVERNOR_SKILL_LEVELS:0 "เลเวลผู้ว่าการสูงสุด"
  MOD_LEADER_SCIENTIST_SKILL_LEVELS:0 "เลเวลนักวิทยาศาสตร์สูงสุด"
  MOD_LEADER_COST:0 "ค่าจ้างผู้นำ"
- MOD_LEADER_ADMIRAL_COST:0 "ค่าจ้างนายพล (ยานอวกาศ)"
- MOD_LEADER_GENERAL_COST:0 "ค่าจ้างนายพล (ทัพผิวดาว)"
+ MOD_LEADER_ADMIRAL_COST:0 "ค่าจ้างพลเรือเอก"
+ MOD_LEADER_GENERAL_COST:0 "ค่าจ้างพลเอก"
  MOD_LEADER_SCIENTIST_COST:0 "ค่าจ้างนักวิทยาศาสตร์"
  MOD_LEADER_GOVERNOR_COST:0 "ค่าจ้างผู้ว่าการ"
  MOD_LEADER_SPECIES_EXP_GAIN:0 "ผู้นำได้รับค่าประสบการณ์"
+ MOD_LEADER_COUNCILOR_EXP_GAIN:0 "เพิ่มประสบการณ์ที่ปรึกษา"
+ MOD_COUNTRY_LEADER_CAP_ADD:0 "จำนวนความจุของผู้นำ"
+ skill_governor_homeplanet:0 "ปกครองดาวเคราะห์บ้านเกิด"
+ governing_homeplanet_effect:0 "§Eผลของการปกครองดาวบ้านเกิด:§!"
  MOD_COMPONENT_RANGE_MULT:0 "ระยะการทำงานของส่วนประกอบ"
  MOD_POP_FACTION_SUPPORT_INCREASE_CHANCE_ADD:0 "โอกาสในการสนับสนุนกลุ่มการเมืองเพิ่มขึ้น"
  MOD_POP_FACTION_SUPPORT_INCREASE_CHANCE_MULT:0 "โอกาสในการสนับสนุนกลุ่มการเมืองเพิ่มขึ้น"
@@ -539,6 +550,7 @@
  mod_country_max_resource_food_add:0 "ความจุที่เก็บอาหาร"
  mod_country_max_resource_energy_add:0 "ความจุของที่เก็บพลังงาน"
  mod_country_max_influence_add:0 "อิทธิพลสูงสุด"
+ mod_country_resource_max_minor_artifacts_add:0 "ความจุของศิลปวัตถุชั้นรอง"
  mod_country_base_energy_produces_add:2 "£energy£ เครดิตพลังงานต่อเดือน"
  mod_country_base_minerals_produces_add:2 "£minerals£ แร่ธาตุต่อเดือน"
  mod_country_base_food_produces_add:1 "£food£ อาหารต่อเดือน"
@@ -561,6 +573,7 @@
  mod_country_base_influence_produces_add:0 "อิทธิพลรายเดือน"
  mod_planet_resource_influence_add:0 "ค่าอิทธิพลที่ได้รับจากดาวเคราะห์"
  mod_country_base_influence_produces_mult:0 "ได้รับค่าอิทธิพลของจักรวรรดิ"
+ mod_rivalries_influence_produces_mult:0 "ได้รับค่าอิทธิพลของจักรวรรดิคู่แข่ง"
  mod_country_resource_physics_research_mult:0 "การวิจัยทางฟิสิกส์"
  mod_country_resource_society_research_mult:0 "การวิจัยทางสังคม"
  mod_country_resource_engineering_research_mult:0 "การวิจัยทางวิศวกรรม"
@@ -602,6 +615,8 @@
  mod_country_tech_influence_produces_add:0 "$MOD_COUNTRY_INFLUENCE_GAIN_ADD$"
  mod_country_tech_unity_produces_add:0 "£unity£ เอกภาพต่อเดือน"
  mod_country_traditions_influence_produces_add:0 "$MOD_COUNTRY_INFLUENCE_GAIN_ADD$"
+ mod_country_councilor_energy_produces_add:0 "$MOD_COUNTRY_ENERGY_GAIN_ADD$"
+ mod_country_councilor_influence_produces_add:0 "$MOD_COUNTRY_INFLUENCE_GAIN_ADD$"
  mod_country_ruler_influence_produces_add:0 "$MOD_COUNTRY_INFLUENCE_GAIN_ADD$"
  mod_country_ethic_influence_produces_add:0 "$MOD_COUNTRY_INFLUENCE_GAIN_ADD$"
  mod_country_power_projection_influence_produces_add:1 "£influence£ $influence$ สูงสุดจาก $country_power_projection$"
@@ -693,21 +708,40 @@
  mod_shipclass_starbase_hull_mult:0 "HP ฐานอวกาศ"
  mod_shipclass_starbase_damage_mult:0 "พลังโจมตีของฐานอวกาศ"
  mod_shipclass_starbase_build_cost_mult:0 "ค่าใช้จ่ายในการสร้างฐานอวกาศ"
+ mod_shipclass_colonizer_build_cost_mult:0 "ค่าใช่จ่ายในการสร้างยานอาณานิคม"
  mod_weapon_type_explosive_weapon_damage_mult:0 "พลังโจมตีอาวุธประเภทระเบิด"
- mod_weapon_type_explosive_weapon_fire_rate_mult:0 "ความเร็วในการโจมตีอาวุธประเภทระเบิด"
+ mod_weapon_type_explosive_weapon_fire_rate_mult:1 "อัตราการยิงอาวุธประเภทระเบิด"
  mod_weapon_type_kinetic_weapon_damage_mult:0 "พลังโจมตีอาวุธพลังงานจลน์"
- mod_weapon_type_kinetic_weapon_fire_rate_mult:0 "ความเร็วในการโจมตีอาวุธพลังงานจลน์"
+ mod_weapon_type_kinetic_weapon_fire_rate_mult:1 "อัตราการยิงอาวุธพลังงานจลน์"
  mod_weapon_type_energy_weapon_damage_mult:0 "พลังโจมตีอาวุธพลังงาน"
- mod_weapon_type_energy_weapon_fire_rate_mult:0 "ความเร็วในการโจมตีอาวุธพลังงาน"
+ mod_weapon_type_energy_weapon_fire_rate_mult:1 "อัตราการยิงอาวุธพลังงาน"
  mod_weapon_type_strike_craft_weapon_damage_mult:0 "พลังโจมตีของยานลูก"
- mod_weapon_type_strike_craft_weapon_fire_rate_mult:0 "ความเร็วในการโจมตีของยานลูก"
+ mod_weapon_type_strike_craft_weapon_fire_rate_mult:1 "อัตราการยิงของยานลูก"
  mod_weapon_type_strike_craft_speed_mult:0 "ความเร็วของยานลูก"
- mod_weapon_swarm_weapon_fire_rate_mult:0 "Prethoryn Swarm Weapon Attack Speed"
- mod_weapon_type_space_fauna_weapon_damage_mult:0 "Space Fauna Weapon Damage"
- mod_weapon_type_space_fauna_weapon_fire_rate_mult:0 "Space Fauna Weapon Attack Speed"
+ mod_weapon_swarm_weapon_fire_rate_mult:1 "อัตราการยิงอาวุธ Prethoryn Swarm"
+ mod_weapon_type_space_fauna_weapon_damage_mult:0 "พลังโจมตีอาวุธของสัตว์ในอวกาศ"
+ mod_weapon_type_space_fauna_weapon_fire_rate_mult:1 "อัตราการยิงอาวุธของสัตว์ในอวกาศ"
  mod_weapon_archaeotech_weapon_damage_mult:0 "พลังโจมตีอาวุธจากเทคโนโลยีโบราณคดี"
- mod_weapon_archaeotech_weapon_fire_rate_mult:0 "ความเร็วโจมตีอาวุธจากเทคโนโลยีโบราณคดี"
+ mod_weapon_archaeotech_weapon_fire_rate_mult:1 "อัตราการยิงอาวุธจากเทคโนโลยีโบราณคดี"
  mod_shroud_delve_cooldown:0 "คูลดาวน์การล้วงหาข้อมูลสิ่งที่แอบซ่อน"
+ s_slot:0 "ช่องใส่ชิ้นส่วนขนาดเล็ก"
+ m_slot:0 "ช่องใส่ชิ้นส่วนขนาดกลาง"
+ l_slot:0 "ช่องใส่ชิ้นส่วนขนาดใหญ่"
+ x_slot:0 "ช่องใส่ชิ้นส่วนขนาดใหญ่มาก"
+ t_slot:0 "ช่องใส่ชิ้นส่วนไททัน"
+ g_slot:0 "ช่องใส่ชิ้นส่วนตอร์ปิโด"
+ mod_s_slot_weapon_damage_mult:0 "พลังโจมตีช่องอาวุธขนาดเล็ก"
+ mod_s_slot_weapon_fire_rate_mult:1 "อัตราการยิงช่องอาวุธขนาดเล็ก"
+ mod_m_slot_weapon_damage_mult:0 "พลังโจมตีช่องอาวุธขนาดกลาง"
+ mod_m_slot_weapon_fire_rate_mult:1 "อัตราการยิงช่องอาวุธขนาดกลาง"
+ mod_l_slot_weapon_damage_mult:0 "พลังโจมตีช่องอาวุธขนาดใหญ่"
+ mod_l_slot_weapon_fire_rate_mult:1 "อัตราการยิงช่องอาวุธขนาดใหญ่"
+ mod_x_slot_weapon_damage_mult:0 "พลังโจมตีช่องอาวุธขนาดใหญ่มาก"
+ mod_x_slot_weapon_fire_rate_mult:1 "อัตราการยิงช่องอาวุธขนาดใหญ่มาก"
+ mod_t_slot_weapon_damage_mult:0 "พลังโจมตีช่องอาวุธไททัน"
+ mod_t_slot_weapon_fire_rate_mult:1 "อัตราการยิงช่องอาวุธไททัน"
+ mod_g_slot_weapon_damage_mult:0 "พลังโจมตีช่องอาวุธตอร์ปิโด"
+ mod_g_slot_weapon_fire_rate_mult:1 "อัตราการยิงช่องอาวุธตอร์ปิโด"
  vultaum_asteroid_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (จักรวรรดิแรกเริ่ม)"
  vultaum_asteroid_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะล้มเหลว (จักรวรรดิแรกเริ่ม)"
  vultaum_gasgiant_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (จักรวรรดิแรกเริ่ม)"
@@ -768,21 +802,21 @@
  cybrex_gasgiant_category_research_speed_add:0 "$cybrex_gasgiant_category_research_speed_mult$"
  cybrex_uninhabitable_category_research_speed_add:0 "$cybrex_uninhabitable_category_research_speed_mult$"
  cybrex_habitable_category_research_speed_add:0 "$cybrex_habitable_category_research_speed_mult$"
- mod_category_materials_research_speed_mult:0 "ความเร็วในการวิจัย (เครื่องมือ/วัสดุ)"
- mod_category_propulsion_research_speed_mult:0 "ความเร็วในการวิจัย (การขับเคลื่อน)"
- mod_category_voidcraft_research_speed_mult:0 "ความเร็วในการวิจัย (ยานอวกาศ)"
- mod_category_robotics_research_speed_mult:0 "ความเร็วในการวิจัย (หุ่นยนต์)"
- mod_category_industry_research_speed_mult:0 "ความเร็วในการวิจัย (อุตสาหกรรม)"
- mod_category_field_manipulation_research_speed_mult:0 "ความเร็วในการวิจัย (การควบคุมสนามพลัง)"
- mod_category_particles_research_speed_mult:0 "ความเร็วในการวิจัย (อนุภาค)"
- mod_category_computing_research_speed_mult:0 "ความเร็วในการวิจัย (การคำนวณ)"
- mod_category_metaphysics_research_speed_mult:0 "ความเร็วในการวิจัย (อภิปรัชญา)"
- mod_category_statecraft_research_speed_mult:0 "ความเร็วในการวิจัย (การปกครอง)"
- mod_category_genetics_research_speed_mult:0 "ความเร็วในการวิจัย (พันธุศาสตร์)"
- mod_category_military_theory_research_speed_mult:0 "ความเร็วในการวิจัย (ทฤษฎีทางทหาร)"
- mod_category_biology_research_speed_mult:0 "ความเร็วในการวิจัย (ชีววิทยา)"
- mod_category_new_worlds_research_speed_mult:0 "ความเร็วในการวิจัย (โลกใหม่)"
- mod_category_psionics_research_speed_mult:0 "ความเร็วในการวิจัย (พลังจิต)"
+ mod_category_materials_research_speed_mult:1 "ความเร็วในการวิจัย (§Yวัสดุ§!)"
+ mod_category_propulsion_research_speed_mult:1 "ความเร็วในการวิจัย (§Yการขับเคลื่อน§!)"
+ mod_category_voidcraft_research_speed_mult:1 "ความเร็วในการวิจัย (§Yยานอวกาศ§!)"
+ mod_category_robotics_research_speed_mult:1 "ความเร็วในการวิจัย (§Yหุ่นยนต์§!)"
+ mod_category_industry_research_speed_mult:1 "ความเร็วในการวิจัย (§Yอุตสาหกรรม§!)"
+ mod_category_field_manipulation_research_speed_mult:1 "ความเร็วในการวิจัย (§Yการควบคุมสนามพลัง§!)"
+ mod_category_particles_research_speed_mult:1 "ความเร็วในการวิจัย (§Yอนุภาค§!)"
+ mod_category_computing_research_speed_mult:1 "ความเร็วในการวิจัย (§Yการคำนวณ§!)"
+ mod_category_metaphysics_research_speed_mult:1 "ความเร็วในการวิจัย (§Yอภิปรัชญา§!)"
+ mod_category_statecraft_research_speed_mult:1 "ความเร็วในการวิจัย (§Yการปกครอง§!)"
+ mod_category_genetics_research_speed_mult:1 "ความเร็วในการวิจัย (§Yพันธุศาสตร์§!)"
+ mod_category_military_theory_research_speed_mult:1 "ความเร็วในการวิจัย (§Yทฤษฎีทางทหาร§!)"
+ mod_category_biology_research_speed_mult:1 "ความเร็วในการวิจัย (§Yชีววิทยา§!)"
+ mod_category_new_worlds_research_speed_mult:1 "ความเร็วในการวิจัย (§Yโลกใหม่§!)"
+ mod_category_psionics_research_speed_mult:1 "ความเร็วในการวิจัย (§Yพลังจิต§!)"
  hydroponics_farm_build_cost_mult:0 "ค่าใช้จ่ายในการสร้างฟาร์มปลูกพืชไร้ดิน"
  hydroponics_farm_construction_speed_mult:0 "ความเร็วในการสร้างฟาร์มปลูกพืชไร้ดิน"
  mining_network_build_cost_mult:0 "ค่าใช้จ่ายในการสร้างเครือข่ายเหมืองแร่"
@@ -1123,6 +1157,9 @@
  triggered_pacifist_opinion_barbaric_despoilers:0 "$civic_barbaric_despoilers$"
  triggered_fe_opinion_barbaric_despoilers:0 "$civic_barbaric_despoilers$"
  triggered_opinion_relic_omnicodex:0 "$r_omnicodex$"
+ triggered_opinion_crusader_spirit:0 "$civic_crusader_spirit$"
+ triggered_opinion_crusader_spirit_machine_empires:0 "$civic_crusader_spirit$"
+ triggered_opinion_crusader_spirit_pos:0 "$civic_crusader_spirit$"
  capital:0 "โลกศูนย์กลางจักรวรรดิ"
  capital_desc:0 "The Capital planet of an interstellar empire is a vast complex of government buildings, bureaus and agency headquarters."
  distance_from_capital:0 "ระยะทางจากศูนย์กลาง"
@@ -1319,7 +1356,7 @@
  planet_num_pops:0 "จากขนาดของประชากร"
  disconnected_from_sector:0 ""
  skill_admiral:1 "สกิลพลเรือเอก"
- skill_general:1 "สกิลนายพล"
+ skill_general:1 "สกิลพลเอก"
  skill_scientist:1 "สกิลนักวิทยาศาสตร์"
  skill_governor:2 "สกิลผู้ว่าการ"
  skill_ruler:1 "สกิลผู้ปกครอง"
