--- a/mod/thmod/localisation/english/modifiers_utopia_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_utopia_l_english.yml
@@ -11,7 +11,7 @@
  ms_build_speed_mult:0 "Favorable Conditions"
  lower_build_speed_mult:0 "Construction Delayed"
  ring_world_halted:0 "Construction Halted"
- unity_reduction_diplomatic_18:0 "Cultural Indentity Wounded"
+ unity_reduction_diplomatic_18:0 "Cultural Identity Wounded"
  unity_reduction_diplomatic_18_desc:0 "The population's cultural identity has been wounded by the debunking of some of their most treasured legends."
  unity_reduction_akx_9541:0 "The Waiting World Purged"
  unity_reduction_akx_9541_desc:0 "The citizens have lost faith in their leaders, and now live in fear that a similar fate could befall them."
