--- a/mod/thmod/localisation/english/social_gui_l_english.yml
+++ b/mod/thmod/localisation/english/social_gui_l_english.yml
@@ -24,7 +24,7 @@
  INVITE_SUCCESS_RESOLUTION:0 "Invitation accepted"
  INVITE_DECLINED_RESOLUTION:0 "Invitation declined"
  INVITE_ALREADY_CONNECTED_RESOLUTION:0 "Already connected"
- INVITE_UNKNOWN_RESOLUTION:0 "Error occured"
+ INVITE_UNKNOWN_RESOLUTION:0 "Error occurred"
  INVITATION_SENT:0 "Invitation sent"
  SOCIAL_NEW_FRIEND:0 "§GYou have a new Friend Request!§!"
  SOCIAL_DSTATUS_PLAYING_GAME:0 "Playing $GAME$"
@@ -39,7 +39,7 @@
  SOCIAL_JOIN_REQUEST_RECEIVED:0 "Join request received"
  SOCIAL_JOIN_REQUEST_SUCCESS_RESOLUTION:0 "Join request accepted"
  SOCIAL_JOIN_REQUEST_DECLINED_RESOLUTION:0 "Join request declined"
- SOCIAL_JOIN_REQUEST_UNKNOWN_RESOLUTION:0 "Error occured"
+ SOCIAL_JOIN_REQUEST_UNKNOWN_RESOLUTION:0 "Error occurred"
  SOCIAL_INVITE_EXPIRED:0 "Invitation expired"
  SOCIAL_JOIN_REQUEST_EXPIRED:0 "Join request expired"
  SOCIAL_INVITE_ACCEPTED:0 "Your invitation was accepted"
