--- a/mod/thmod/localisation/english/utopia_l_english.yml
+++ b/mod/thmod/localisation/english/utopia_l_english.yml
@@ -3,11 +3,11 @@
  BUILD_MEGASTRUCTURE_WITHIN_INNER_CIRCLE:0 "§RCannot build this Megastructure within a system's gravity well§!"
  BUILD_MEGASTRUCTURE_CANT_BUILD_ON_PLANET:0 "§RCannot build this Megastructure on a planet§!"
  BUILD_MEGASTRUCTURE_BUILD_ON_PLANET:0 "§RCan only build this Megastructure on a planet§!"
- MEGASTRUCTURE_DESC:0 "สิ่งก่อสร้างขนาดใหญ่นี้เป็นของ §Y$OWNER$§!"
+ MEGASTRUCTURE_DESC:0 "สิ่งก่อสร้างขนาดมหึมานี้เป็นของ §Y$OWNER$§!"
  MEGASTRUCTURE_CLICK:0 "§Gคลิกเพื่อเปิดเมนูอัปเกรด§!"
  MEGASTRUCTURE_UPGRADE_TOOLTIP_HEADER:0 "$NAME|H$\n$DESC|L$"
  MEGASTRUCTURE_UPGRADE_TO:0 "อัปเกรดเป็น $TYPE$"
- MEGASTRUCTURE_CLICK_TO_UPGRADE:0 "§Gคลิกเพื่ออัปเกรดสิ่งก่อสร้างขนาดใหญ่นี้§!"
+ MEGASTRUCTURE_CLICK_TO_UPGRADE:0 "§Gคลิกเพื่ออัปเกรดสิ่งก่อสร้างขนาดมหึมานี้§!"
  MEGASTRUCTURE_IS_UPGRADING:0 "กำลังอัปเกรดเป็น $TYPE|H$\nวันที่เสร็จสมบูรณ์โดยประมาณ: $DATE|H$"
  MEGASTRUCTURE_ALREADY_UPGRADING:0 "§Rอยู่ระหว่างการอัปเกรด!§!"
  MEGASTRUCTURE_TOOLTIP_PRODUCTION_HEADER:0 "การผลิตต่อเดือน:"
@@ -42,9 +42,9 @@
  think_tank_3_DESC:0 "A fully equipped and operational Science Nexus."
  think_tank_4:0 "Groik Nexus (ขั้นที่4)"
  think_tank_4_DESC:0 "Named after its inventor, this Science Nexus has a neural bank containing the brain of one of our finest researchers integrated into its main drive, allowing it to operate at an increased speed."
- allow_ring_world:0 "§Hปลดล็อกสิ่งก่อสร้างขนาดใหญ่:§! โลกวงแหวน / พิภพวงแหวน"
- allow_spy_orb:0 "§Hปลดล็อกสิ่งก่อสร้างขนาดใหญ่:§! อาร์เรย์สังเกตุการณ์กาแล็กซี"
- allow_think_tank:0 "§Hปลดล็อกสิ่งก่อสร้างขนาดใหญ่:§! สถานีเชื่อมโยงวิทยาศาสตร์ขนาดใหญ่"
+ allow_ring_world:0 "§Hปลดล็อกสิ่งก่อสร้างขนาดมหึมา:§! โลกวงแหวน / พิภพวงแหวน"
+ allow_spy_orb:0 "§Hปลดล็อกสิ่งก่อสร้างขนาดมหึมา:§! อาร์เรย์สังเกตุการณ์กาแล็กซี"
+ allow_think_tank:0 "§Hปลดล็อกสิ่งก่อสร้างขนาดมหึมา:§! สถานีเชื่อมโยงวิทยาศาสตร์ขนาดใหญ่"
  allow_habitats:0 "§Hปลดล็อกสถานี:§! ที่อยู่อาศัยในอวกาศ"
  ap_master_builders_habitat_size:2 "§Hที่อยู่อาศัยในอวกาศ§! ของจักรวรรดิเราจะมีที่ว่างเพิ่มเติมอีก §Y2§! เขต"
  allow_edict_consectrated_worlds:5 "§Hปลดล็อกการตัดสินใจ:§! โลกศักดิ์สิทธิ์\n"
@@ -188,56 +188,6 @@
  trait_psionic_desc:0 "§LAll members of this species possess powerful psionic abilities. They typically communicate with each other through telepathy.§!\n"
  trait_self_modified:0 "แก้ไขตัวเอง"
  trait_self_modified_desc:0 "§LMembers of this offshoot species have spontaneously altered their genetic makeup to give themselves an advantage.§!"
- leader_trait_admiral_erudite:0 "มีวิชาความรู้สูง"
- leader_trait_admiral_erudite_desc:0 "This leader has a vastly enhanced intellect, improving their ability to command fleets."
- leader_trait_general_erudite:0 "$leader_trait_admiral_erudite$"
- leader_trait_general_erudite_desc:0 "This leader has a vastly enhanced intellect, improving their ability to command armies."
- leader_trait_governor_erudite:0 "$leader_trait_admiral_erudite$"
- leader_trait_governor_erudite_desc:0 "This leader has a vastly enhanced intellect, improving their ability to govern."
- leader_trait_scientist_erudite:0 "$leader_trait_admiral_erudite$"
- leader_trait_scientist_erudite_desc:0 "This leader has a vastly enhanced intellect, improving their abilities as a scientist."
- leader_trait_ruler_erudite:0 "$leader_trait_admiral_erudite$"
- leader_trait_ruler_erudite_desc:0 "This leader has a vastly enhanced intellect, improving their ability to rule."
- leader_trait_admiral_cyborg:0 "ไซบอร์ก-มนุษย์ดัดแปลง"
- leader_trait_admiral_cyborg_desc:0 "This leader is equipped with military-grade cybernetic implants that can interface directly with fleet command and control systems."
- leader_trait_general_cyborg:0 "$leader_trait_admiral_cyborg$"
- leader_trait_general_cyborg_desc:0 "This leader is equipped with military-grade cybernetic implants that are not only lethal in combat, but also come with a full command and control suite for increased battlefield awareness."
- leader_trait_governor_cyborg:0 "$leader_trait_admiral_cyborg$"
- leader_trait_governor_cyborg_desc:0 "This leader is equipped with a large collection of assorted cybernetic implants that, among other things, greatly improve administrative efficiency."
- leader_trait_scientist_cyborg:0 "$leader_trait_admiral_cyborg$"
- leader_trait_scientist_cyborg_desc:0 "This leader has been heavily augmented with cybernetic implants, which, among other things, provide real-time neural access to all major research databases."
- leader_trait_ruler_cyborg:0 "$leader_trait_admiral_cyborg$"
- leader_trait_ruler_cyborg_desc:0 "This leader has been heavily augmented with cybernetic implants that have far greater service lives than the obsolescent organic body parts they replaced."
- leader_trait_admiral_synthetic:0 "จักรกลสังเคราะห์"
- leader_trait_admiral_synthetic_desc:0 "This synthetic leader is equipped with military-grade upgrades that can interface directly with fleet command and control systems."
- leader_trait_general_synthetic:0 "$leader_trait_admiral_synthetic$"
- leader_trait_general_synthetic_desc:0 "This synthetic leader is equipped with military-grade upgrades that are not only lethal in combat, but also come with a full command and control suite for increased battlefield awareness."
- leader_trait_governor_synthetic:0 "$leader_trait_admiral_synthetic$"
- leader_trait_governor_synthetic_desc:0 "This synthetic leader is equipped with a large collection of assorted software upgrades that, among other things, greatly improve administrative efficiency."
- leader_trait_scientist_synthetic:0 "$leader_trait_admiral_synthetic$"
- leader_trait_scientist_synthetic_desc:0 "This synthetic leader has been upgraded with an advanced software package, that, among other things, provides real-time neural access to all major research databases."
- leader_trait_ruler_synthetic:0 "$leader_trait_admiral_synthetic$"
- leader_trait_ruler_synthetic_desc:0 "$leader_trait_governor_synthetic_desc$"
- leader_trait_admiral_psionic:0 "พลังจิต"
- leader_trait_admiral_psionic_desc:0 "This leader is a powerful psychic, with an uncanny ability to sense where incoming fire will appear."
- leader_trait_general_psionic:0 "$leader_trait_admiral_psionic$"
- leader_trait_general_psionic_desc:0 "This leader is a powerful psychic, capable of bolstering the resolve of the troops while at the same time sowing fear and confusion among the enemy."
- leader_trait_governor_psionic:0 "$leader_trait_admiral_psionic$"
- leader_trait_governor_psionic_desc:0 "This leader is a powerful psychic."
- leader_trait_scientist_psionic:0 "$leader_trait_admiral_psionic$"
- leader_trait_scientist_psionic_desc:0 "This leader is a powerful psychic."
- leader_trait_ruler_psionic:0 "$leader_trait_admiral_psionic$"
- leader_trait_ruler_psionic_desc:0 "This leader is a powerful psychic."
- leader_trait_admiral_chosen:0 "เลือกหนึ่งอย่าง"
- leader_trait_admiral_chosen_desc:0 "This leader is the Chosen One, an immortal being that wields incredible psionic power."
- leader_trait_general_chosen:0 "$leader_trait_admiral_chosen$"
- leader_trait_general_chosen_desc:0 "$leader_trait_admiral_chosen_desc$"
- leader_trait_governor_chosen:0 "$leader_trait_admiral_chosen$"
- leader_trait_governor_chosen_desc:0 "$leader_trait_admiral_chosen_desc$"
- leader_trait_ruler_chosen:0 "$leader_trait_admiral_chosen$"
- leader_trait_ruler_chosen_desc:0 "$leader_trait_admiral_chosen_desc$"
- leader_trait_scientist_chosen:0 "$leader_trait_admiral_chosen$"
- leader_trait_scientist_chosen_desc:0 "$leader_trait_admiral_chosen_desc$"
  leader_trait_shroud_age:0 "อายุขัยเพิ่มขึ้น"
  leader_trait_shroud_age_desc:0 "The powerful psionic energies of the Shroud have slowed the natural aging process of this leader."
  leader_trait_reformer:0 "นักปฏิรูป"
@@ -309,4 +259,4 @@
  utopia.61.name:0 "[From.From.From.Planet.GetName] Habitat Complete"
  utopia.61.desc.a:0 "We have completed the construction of our first habitat and it is finally time to ready a colony vessel and make landfall on a world we ourselves have created.\n\nFrom its mechanized core to its highest mountains, every nut, bolt, creek and cranny has been designed to fit our needs perfectly in our new home among the stars."
  utopia.61.desc.b:0 "The [From.From.From.Planet.GetName] habitat is now complete and ready for colonization."
- allow_dyson_sphere:0 "§Hปลดล็อกสิ่งก่อสร้างขนาดใหญ่:§! ทรงกลมไดสัน"
+ allow_dyson_sphere:0 "§Hปลดล็อกสิ่งก่อสร้างขนาดมหึมา:§! ทรงกลมไดสัน"
