--- a/mod/thmod/localisation/english/utopia_megastructures_l_english.yml
+++ b/mod/thmod/localisation/english/utopia_megastructures_l_english.yml
@@ -194,7 +194,7 @@
  utopia.80.name:0 "Science Nexus Construction"
  utopia.80.desc:0 "We have now begun the massive undertaking of constructing a Science Nexus. The foundation is in place and preparations are underway to add the main hub. The promise of new groundbreaking technologies and the realization of ideas beyond our wildest imaginations await. And though the road ahead is long and full of challenges, we have taken the first step.\n\nCould the endless mysteries of the universe finally be within our grasp?"
  utopia.80.a:0 "The future is ours."
- utopia.82.name:0 "สิ่งก่อสร้างขนาดใหญ่ของเอเลี่ยน"
+ utopia.82.name:0 "สิ่งก่อสร้างขนาดมหึมาของเอเลี่ยน"
  utopia.82.desc.a:2 "The [From.GetName] have taken on the challenge of building a Science Nexus - a research institute, so technically advanced, that it could revolutionize the scientific process completely.\n\nThe [think_tank_system.GetName] system is bustling with activity as engineers are assembling the initial build site. Regardless of whether they fail or succeed, trying alone has earned them a place among the great forerunners of our time."
  utopia.82.desc.b:0 "The [From.GetName] have begun to construct yet another Science Nexus, this time in the [think_tank_system.GetName] system."
  utopia.82.a:0 "A testament to the ingenuity of intelligent life."
@@ -210,7 +210,7 @@
  utopia.84.desc.a:0 "Today we celebrate the grand opening of the Science Nexus. With its state of the art research facilities and innovative technology we will have no trouble attracting the greatest minds from across the empire, or even the universe, should we so desire. This feat truly marks the beginning of a new era of enlightenment.\n\nIt is a big day in the history of our kind."
  utopia.84.desc.b:0 "Today we celebrate the completion of yet another Science Nexus. If our previous accomplishments hadn't already, this will surely earn us a place on the forefront of scientific progress in the universe. Our technological advancements will allow us to shape the future to our liking."
  utopia.84.a:0 "Indeed."
- utopia.86.name:0 "สิ่งก่อสร้างขนาดใหญ่ของเอเลี่ยน (เสร็จแล้ว)"
+ utopia.86.name:0 "สิ่งก่อสร้างขนาดมหึมาของเอเลี่ยน (เสร็จแล้ว)"
  utopia.86.desc:0 "The [From.GetName] have constructed a Science Nexus, disproving all who doubted and placing them on the forefront for scientific progress. We may want to keep an eye on them, as the completion of such a structure will surely propel their technology into the future, giving them an advantage over other civilizations."
  utopia.86.a:0 "We will not be left behind."
  utopia.2000.name:0 "Ring World Construction"
@@ -236,7 +236,7 @@
  utopia.4000.name:0 "Dyson Sphere Construction"
  utopia.4000.desc:0 "Harnessing the power of the stars has been a dream of [Root.GetAdj] engineers throughout history - from crude combustion to the pale imitation of solar fusion - and we now stand ready to realize this dream. In the [From.From.GetName] system sits the scaffold upon which we will build a Dyson Sphere, encompassing [From.From.GetName] and monopolizing the cataclysmic power of the star."
  utopia.4000.a:0 "Boundless."
- utopia.4002.name:0 "สิ่งก่อสร้างขนาดใหญ่ของเอเลี่ยน"
+ utopia.4002.name:0 "สิ่งก่อสร้างขนาดมหึมาของเอเลี่ยน"
  utopia.4002.desc.a:0 "Frenetic activity in the [dyson_system.GetName] system betrays the construction of a §HDyson Sphere§! by the [From.GetName].\n\nStill in its early stages, the completed sphere will eventually blot out the light of [dyson_system.GetName], its radiance diverted to [From.GetAdj] energy stores."
  utopia.4002.desc.b:0 "By all accounts, the [dyson_system.GetName] will soon play host to yet another Dyson Sphere operated by the [From.GetName]. Though it will take some time, the megastructure will completely envelop the system's primary star once completed."
  utopia.4002.a:0 "All stellar powers must eventually tame the stars."
@@ -250,7 +250,7 @@
  utopia.4005.name:0 "[From.From.GetName] Dyson Sphere Completed"
  utopia.4005.desc:0 "The [From.From.GetName] system's primary has now been completely enveloped by a [Root.GetAdj] Dyson Sphere.\n\nOur engineers celebrate this as a great victory, and rightly so. We have achieved what only a handful of star empires in the history of the galaxy dared imagine - the total subjugation of a star."
  utopia.4005.a:0 "Energy output nominal."
- utopia.4010.name:0 "สิ่งก่อสร้างขนาดใหญ่ของเอเลี่ยน (เสร็จแล้ว)"
+ utopia.4010.name:0 "สิ่งก่อสร้างขนาดมหึมาของเอเลี่ยน (เสร็จแล้ว)"
  utopia.4010.desc:0 "The last detectable traces of light from the [From.From.From.GetName] system's star flicker out. The [From.GetName] has completed its Dyson Sphere, and a new void in the sky stands testament to [From.GetAdj] ingenuity and wealth."
  utopia.4100.name:0 "การก่อสร้างอาร์เรย์สังเกตุการณ์กาแล็กซี"
  utopia.4100.desc:0 "The light of suns blinds and the darkness of the void hides; only when we learned to travel faster than light did we learn just how little the light reveals.\n\nToday, we begin to end this amaurosis of ours. The Sentry Array we prepare to build in the [From.solar_system.GetName] system will one day become a stalwart panopticon, our eye on every star."
