--- a/mod/thmod/localisation/english/apocalypse_l_english.yml
+++ b/mod/thmod/localisation/english/apocalypse_l_english.yml
@@ -38,8 +38,8 @@
  not_barren_molten_frozen_toxic_test_fire:3 "Target must be one of the following to be a test fire candidate:\n$tt$§H- Uninhabited Habitable World§!\n$tt$§H- $pc_barren$§!\n$tt$§H- $pc_molten$§!\n$tt$§H- $pc_frozen$§!\n$tt$§H- $pc_toxic$§!"
  not_owned_test_fire:0 "Target is an §Yowned colony§! test fire target"
  primitives_not_in_borders:1 "§R$TRIGGER_FAIL$Pre-FTL target is not within our borders§!"
- primitives_not_full_interference:0 "§R$TRIGGER_FAIL$Requires §Y$interference_aggressive$§! $policy_interference$ policy§!"
- primitives_not_active_or_full_interference:0 "§R$TRIGGER_FAIL$Requires §Y$interference_active$§! or §Y$interference_aggressive$§! $policy_interference$ policy§!"
+ primitives_not_full_interference:1 "§R$TRIGGER_FAIL$Requires §Y$interference_aggressive$§! $policy_interference$ policy§!"
+ primitives_not_active_or_full_interference:1 "§R$TRIGGER_FAIL$Requires §Y$interference_active$§! or §Y$interference_aggressive$§! $policy_interference$ policy§!"
  no_assimilatable_pops:0 "§R$TRIGGER_FAIL$Target does not house any Pops suitable for cybernetic assimilation§!"
  enable_colossus_project:0 "§Hออกโครงการพิเศษ:§! โครงการโคลอสซัส\n\n"
  describe_colossus_project:0 "เสร็จสิ้น §Yโครงการโคลอสซัส§! เพื่อปลดล็อก §Hยานประเภท§! §Yโคลอสซัส§! ที่สามารถติด §Rอาวุธทำลายดาวเคราะห์§! ได้"
@@ -133,6 +133,9 @@
  STARBASE_OPEN_SHIP_DESIGNS:0 "เปิดการออกแบบยาน"
  STARBASE_OPEN_DEFENSE_DESIGNS:0 "เปิดการออกแบบระบบป้องกัน"
  STARBASE_SHIPYARD_CAPACITY:0 "อู่ต่อยาน: $COUNT|Y$"
+ MACRO_BUILDER_CAPACITY:0 "ดาวเคราะห์ในเซ็กเตอร์: $COUNT$"
+ MACRO_BUILDER_CATALOG:0 "สร้างกองทัพ"
+ ARMY_BUILDER_ENTRY:0 "คลิกเพื่อส่งคำสั่งเรียกกำลังพล $TYPE|Y$ ไปที่ดาวเคราะห์ต่างๆในเซ็กเตอร์นี้\n\n£ctrl£ §Gคลิกเพื่อเข้าคิว 5 กองทัพพร้อมกัน§!"
  STARBASE_SHIPYARD_CAPACITY_DESC:0 "The amount of Shipyards controls how many ships the Starbase can build in parallel."
  STARBASE_NO_SHIPYARD:0 "§RStarbase does not have any Shipyard§!"
  STARBASE_NOT_CONTROLLED:0 "§RWe do not control the Starbase§!"
@@ -145,14 +148,14 @@
  STARBASE_BUILDING_ALREADY_BUILT:0 "§RBuilding already built on this Starbase.§!"
  STARBASE_BUILDING_ALREADY_QUEUED:0 "§RBuilding is already queued for construction.§!"
  STARBASE_BUILDING_BUSY:0 "§RBuilding is currently used and cannot be replaced or dismantled§!"
- STARBASE_DISMANTLE_DIALOG_TITLE:0 "รื้อฐานอวกาศ"
- STARBASE_DISMANTLE_DIALOG_DESC:0 "Are you sure you wish to dismantle the Starbase? You will lose control of the system."
+ STARBASE_DISMANTLE_DIALOG_TITLE:1 "รื้อถอนฐานอวกาศ?"
+ STARBASE_DISMANTLE_DIALOG_DESC:1 "This will destroy the Starbase and you will lose control over this System."
  STARBASE_DOWNGRADE_DIALOG_TITLE:0 "ดาวน์เกรดฐานอวกาศ"
- STARBASE_DOWNGRADE_DIALOG_DESC:1 "Are you sure you wish to downgrade the Starbase to an Outpost? All buildings and modules will be lost, but the system will no longer impact your Starbase Capacity."
+ STARBASE_DOWNGRADE_DIALOG_DESC:2 "Downgrade the §HStarbase§! to an §HOutpost§!?\n\nAll buildings and modules will be lost, but the system will no longer count toward your §HStarbase Capacity§!."
  STARBASE_RETURN_CONTROL_DIALOG_TITLE:1 "คืนการควบคุม"
- STARBASE_RETURN_CONTROL_DIALOG_DESC:1 "Are you sure you wish to return the control of this Starbase to its owner?"
- STARBASE_DISMANTLE_COMPONENT_DIALOG_TITLE:0 "รื้อ"
- STARBASE_DISMANTLE_COMPONENT_DIALOG_DESC:0 "Are you sure you wish to dismantle $NAME|Y$?"
+ STARBASE_RETURN_CONTROL_DIALOG_DESC:2 "Return the control of this Starbase to its owner?"
+ STARBASE_DISMANTLE_COMPONENT_DIALOG_TITLE:1 "รื้อถอน?"
+ STARBASE_DISMANTLE_COMPONENT_DIALOG_DESC:1 "$NAME|Y$ จะถูกทำลาย"
  STARBASE_DEFENSE_PLATFORM_CAPACITY:0 "แพลตฟอร์มป้องกัน: $COUNT|Y$/$MAX|Y$"
  STARBASE_DEFENSE_PLATFORM_CAPACITY_DESC:0 "The amount of Defense Platforms that can be built around this Starbase."
  STARBASE_DEFENSE_PLATFORM_CAPACITY_REACHED:0 "Defensive Platform max capacity reached: $MAX|Y$"
@@ -217,9 +220,9 @@
  MEGASTRUCTURE_BUILD_CANNOT_MOVE_TO_TARGET:1 "Cannot build this megastructure in an unreachable system"
  MEGASTRUCTURE_BUILD_INSIDE_SYSTEM_RADIUS:0 ""
  NUM_GATEWAYS:0 "เกตเวย์ที่ถูกทิ้งร้าง"
- NUM_GATEWAYS_TOOLTIP:2 "§HAbandoned Gateways§!\nMultiplies the standard number of abandoned gateways that will be generated in the galaxy."
+ NUM_GATEWAYS_TOOLTIP:3 "§Hเกตเวย์ที่ถูกทิ้งร้าง§!\nค่าที่ตั้งคูณกับจำนวนมาตรฐานจะกลายเป็นจำนวน ['concept_gateways'] ที่ถูกทิ้งร้างในกาแล็กซี"
  NUM_WORMHOLES:0 "คู่รูหนอน"
- NUM_WORMHOLES_TOOLTIP:1 "§Hคู่รูหนอน§!\nจำนวนคู่รูหนอนมาตรฐานที่จะถูกสร้างขึ้นในกาแล็กซี"
+ NUM_WORMHOLES_TOOLTIP:2 "§Hคู่รูหนอน§!\nค่าที่ตั้งคูณกับจำนวนมาตรฐานจะกลายเป็นจำนวน ['concept_wormhole_pairs'] จะถูกสร้างขึ้นในกาแล็กซี"
  NAME_gateway_final:0 "เกตเวย์"
  TRIGGER_HAS_WORMHOLE:0 "Contains a Wormhole"
  TRIGGER_HAS_WORMHOLE_NOT:0 "Does NOT contain a Wormhole"
@@ -259,18 +262,20 @@
  leviathans.340.tooltip:0 "We can now build the §HArt College§! Starbase Building in the §Y[artist_system.GetName]§! system."
  leviathans.300.g.opinion:0 "Requires the §YArtisans§! to have:\n£opinion£ Opinion +50"
  FLEET_MANAGER_VIEW:0 "จัดการกองยาน"
- FLEET_MANAGER_SHIP_DESIGN_COUNT:0 "$FLEET_COUNT$/$TEMPLATE_COUNT$"
- FLEET_MANAGER_SHIP_DESIGN_UPGRADABLE_COUNT:0 "£fleet_status|2£ $FLEET_COUNT|Y$/$TEMPLATE_COUNT$"
- FLEET_MANAGER_SHIP_DESIGN_COUNT_FULL:0 "$TEMPLATE_COUNT$"
- FLEET_MANAGER_SHIP_OFFENSIVE_POWER:1 "£military_power£ $FLEET_POWER$/$TEMPLATE_POWER$"
- FLEET_MANAGER_SHIP_OFFENSIVE_POWER_FULL:0 "£military_power£ $TEMPLATE_POWER$"
+ FLEET_NAME_HEADER:0 "ยาน"
+ FLEET_MANAGER_SHIP_DESIGN_COUNT:1 "$FLEET_COUNT|Y$/$TEMPLATE_COUNT|Y$"
+ FLEET_MANAGER_SHIP_DESIGN_UPGRADABLE_COUNT:1 "£fleet_status|2£ $FLEET_COUNT|Y$/$TEMPLATE_COUNT|Y$"
+ FLEET_MANAGER_SHIP_DESIGN_COUNT_FULL:1 "$TEMPLATE_COUNT|Y$"
+ FLEET_MANAGER_SHIP_OFFENSIVE_POWER:2 "£military_power£ $FLEET_POWER|Y$/$TEMPLATE_POWER|Y$"
+ FLEET_MANAGER_SHIP_OFFENSIVE_POWER_FULL:1 "£military_power£ $TEMPLATE_POWER|Y$"
  FLEET_MANAGER_HOME_BASE:0 "$HOME_BASE$"
+ FLEET_MANAGER_ADD_SHIP_DESIGN_BUTTON_TEXT:0 "เพิ่มยาน"
  FLEET_MANAGER_ADD_SHIP_DESIGN:0 "เพิ่มการออกแบบยานไปที่กองยาน"
  FLEET_MANAGER_VIEW_REINFORCE_ALL:0 "เสริมกำลังทั้งหมด"
  FLEET_MANAGER_VIEW_NO_REINFORCE_TEXT:0 "§Gไม่มีกองยานใดที่ต้องการกำลังเสริม§!"
- FLEET_MANAGER_VIEW_REINFORCE_TEXT:1 "$NUMFLEETS|Y$ กองยาน จำเป็นต้องเสริมด้วยยาน $NUMSHIPS|R$ ลำ ค่าใช้จ่าย: $COST$"
- FLEET_MANAGER_VIEW_REINFORCE_COST:1 "ปัจจุบันเราสามารถที่จะเสริมกำลังได้ $NUMSHIPS|Y$ ลำ ค่าใช้จ่าย: $COST$"
- FLEET_MANAGER_VIEW_REINFORCE_COST_NONE:1 "£alloys£ 0"
+ FLEET_MANAGER_VIEW_REINFORCE_TEXT:2 "$NUMFLEETS|Y$ §Hกองยาน§! จำเป็นต้องเสริมด้วยยาน $NUMSHIPS|R$ ลำ ค่าใช้จ่าย $COST|H$"
+ FLEET_MANAGER_VIEW_REINFORCE_COST:2 "We can currently afford to reinforce $NUMSHIPS|Y$ Ship(s) for $COST|H$"
+ FLEET_MANAGER_VIEW_REINFORCE_COST_NONE:2 "£alloys£ §H0§!"
  FLEET_MANAGER_CHOOSE_DESIGN:0 "เลือกการออกแบบ"
  FLEET_MANAGER_BUILD_QUEUE:0 "คิวสร้าง"
  FLEET_MANAGER_HEALTH:0 "£ship_stats_hitpoints£ $VALUE|%0$"
@@ -279,25 +284,33 @@
  FLEET_MANAGER_CREATE_NEW_TEMPLATE:0 "สร้างใหม่"
  FLEET_MANAGER_NEW_TEMPLATE:1 "กองยานใหม่"
  FLEET_MANAGER_RETROFIT:0 "ดัดแปลงแก้ไข"
- topbar_button_fleet_manager_name:0 "$FLEET_MANAGER_VIEW$"
- topbar_button_fleet_manager_instant:0 "§H$FLEET_MANAGER_VIEW$§!"
- topbar_button_fleet_manager_delayed:0 "§Eเปิด$FLEET_MANAGER_VIEW$.§!"
+ topbar_button_fleet_manager_name:1 "จัดการกองยาน"
+ topbar_button_fleet_manager_instant:1 "§H$topbar_button_fleet_manager_name$§!"
+ topbar_button_fleet_manager_delayed:3 "§Eออกแบบยาน สร้างกองยานใหม่และจัดการกองยานเหล่านั้น เช่น กำหนดผู้บัญชาการหรือเสริมกองยานรบมากขึ้น§!"
+ FLEET_MANAGER_OVERWRITE_TEMPLATE:0 "§HOverwrite Fleet Template§!\n§GOverwrite the fleet template with the current fleet contents.§!"
  FLEET_MANAGER_DELETE_TEMPLATE:2 "§Hยุบกองยาน§!\n§Gคลิกเพื่อลบองค์ประกอบกองยานนี้และยกเลิกยานรบที่เกี่ยวข้องทั้งหมด§!"
  FLEET_MANAGER_DELETE_TEMPLATE_DIALOG_TITLE:2 "ยุบกองยาน"
  FLEET_MANAGER_DELETE_TEMPLATE_DIALOG_DESC:2 "คุณต้องการที่จะปลดกองยานนี้?\n\n§Rคำเตือน: การปลดกองยานจะปลดประจำการยานทุกลำที่เกี่ยวข้องกับกองยานนี้§!"
  FLEET_MANAGER_FLEET_NAME_FORMAT:0 "£military_ship£ $FLEET$"
  FLEET_MANAGER_NO_TEMPLATE_SELECTED_HINT:1 "§Eยังไม่ได้เลือกกองยาน§!"
  DISBAND_FM:1 "§Hยุบ§!\n§Gคลิกเพื่อยกเลิกยานรบเหล่านี้§!"
+ REMOVE_FROM_TEMPLATE_FM:0 "§Hลบออกจากเทมเพลต§!\n§Gคลิกเพื่อลบยานรบเหล่านี้ออกจากเทมเพลตกองยาน§!"
  INSPECT_FM:0 "§Hรายละเอียดการออกแบบ§!\n§Gคลิกเพื่อแสดงรายละเอียดเกี่ยวกับการออกแบบยานลำนี้§!"
  RETROFIT_FM:0 "§Hดัดแปลงแก้ไข§!\n§Gคลิกเพื่อสลับการออกแบบนี้เป็นแบบอื่น§!"
- CREATE_NEW_FM:1 "§HCreate New§!\n§GClick here to create a new fleet§!"
- HOME_BASE_FM:1 "§Hฐานประจำการ§!\n§Gคลิกที่นี่เพื่อเลือกฐานประจำการสำหรับกองยานนี้§!"
+ CREATE_NEW_FM:2 "§HCreate New§!\n§GClick to create a new fleet§!"
+ HOME_BASE_FM:3 "$HOME_BASE_TITLE$\n$HOME_BASE_INSTRUCTIONS$"
+ HOME_BASE_TITLE:0 "§Hฐานประจำการ§!"
+ HOME_BASE_INSTRUCTIONS:0 "§Gคลิกเพื่อเลือกฐานประจำการของกองยานนี้§!"
  INCREASE_HEADER:0 "§Hเพิ่ม§!"
  DECREASE_HEADER:0 "§Hลด§!"
- DECREASE_FM:4 "$DECREASE_HEADER$\n§GClick here to decrease the number of ships of this design to be used in this fleet§!\n§YShift-click§! to decrease to the previous multiple of 10, §YControl-click§! to remove all ships"
- INCREASE_FM:4 "$INCREASE_HEADER$\n§GClick here to increase the number of ships of this design to be used in this fleet§!\n§YShift-click§! to increase to the next multiple of 10, §YControl-click§! to add the maximum possible amount of ships"
- REINFORCE_ALL_FM:0 "§HReinforce All§!\n§GClick here to reinforce all current fleets to full capacity§!"
- ADD_DESIGN_FM:1 "§HAdd Ship Design to Fleet§!\n§GClick here to add a new ship design to this fleet§!"
+ DECREASE_FM:5 "$DECREASE_HEADER$\n§GClick to decrease the number of ships of this design to be used in this fleet§!\n§YShift-click§! to decrease to the previous multiple of 10, §YControl-click§! to remove all ships"
+ INCREASE_FM:5 "$INCREASE_HEADER$\n§GClick to increase the number of ships of this design to be used in this fleet§!\n§YShift-click§! to increase to the next multiple of 10, §YControl-click§! to add the maximum possible amount of ships"
+ REINFORCE_ALL_FM:1 "§HReinforce All§!\n§GClick to reinforce all current fleets to full capacity§!"
+ ADD_DESIGN_FM:2 "§HAdd Ship Design to Fleet§!\n§GClick to add a new ship design to this fleet§!"
+ FLEET_VIEW_RALLY_TROOPS_TITLE:0 "§Hระดมพล§!"
+ FLEET_VIEW_RALLY_TROOPS_ENABLED:0 "ปัจจุบัน §Yเปิด§!"
+ FLEET_VIEW_RALLY_TROOPS_DISABLED:0 "ปัจจุบัน §Yปิด§!"
+ FLEET_VIEW_RALLY_TROOPS_DESC:0 "กองยานนี้สามารถ §Hระดมพล§! ได้ §Hกองทัพจู่โจม§! กองใหม่จะเสริมกำลังมาที่กองยานนี้โดยอัตโนมัติหากมีเส้นทาง"
  FLEET_VIEW_OPEN_FLEET_MANAGER:1 "§Hจัดการกองยาน§!\n§Gคลิกเพื่อเปิดตัวจัดการสำหรับกองยานนี้§!"
  FLEET_VIEW_DESIGN_UPGRADABLE:0 "สามารถอัปเกรดการออกแบบได้"
  OUTLINER_FLEET_UPGRADABLE:0 "สามารถอัปเกรดกองยานนี้ได้"
@@ -312,7 +325,7 @@
  FLEET_TEMPLATE_COMMAND_LIMIT_REACHED:0 "Command Limit not enough for adding this ship."
  FLEET_TEMPLATE_EVENT_DESIGN:0 "Event Design"
  MULTIPLE_SHIPS_DISBAND_TITLE:0 "ยุบยาน"
- MULTIPLE_SHIPS_DISBAND_DESC:1 "คุณแน่ใจหรือว่าต้องการปลดยานทั้ง $COUNT$ ลำ?"
+ MULTIPLE_SHIPS_DISBAND_DESC:2 "ปลดยานทั้ง $COUNT$ ลำ?"
  FLEETORDER_FOLLOW_FLEET:0 "ติดตาม $FLEET|Y$"
  FLEETORDER_SET_HOMEBASE:0 "ตั้ง $HOMEBASE|Y$ เป็นฐานประจำการ"
  FLEETORDER_DESTROY_PLANET:0 "$DESC$ $PLANET|Y$"
@@ -352,7 +365,7 @@
  opinion_drenched_my_world:0 "Drenched our World"
  opinion_drenched_a_primitive_world:1 "Drenched a Pre-FTL World"
  opinion_drenched_a_primitive_world_phile:0 "$opinion_cracked_a_primitive_world_phile$"
- NUM_HYPERLANES_TOOLTIP:0 "§HHyperlane Density§!\nMultiplies the standard number of hyperlanes that will be generated in the galaxy."
+ NUM_HYPERLANES_TOOLTIP:1 "§Hความหนาแน่นของไฮเปอร์เลน§!\nค่าที่ตั้งคูณกับจำนวนมาตรฐานจะกลายเป็นจำนวน ['concept_hyperlanes'] ในกาแล็กซี"
  NUM_HYPERLANES:0 "ความหนาแน่นของไฮเปอร์เลน"
  pc_ringworld_shielded:0 "Shielded Segment"
  pc_ringworld_shielded_desc:0 "This Ring World segment is encased in some kind of impenetrable energy barrier. It blocks all scans of the surface."
@@ -368,7 +381,7 @@
  planet_destruction.301.bots.desc:0 "The [From.From.GetName]'s neutron plume peters out, having finished its sweep of [From.GetName]'s surface.\n\nSonic sensors relay nothing but the wind and the gentle clicks and whirrs of the surviving synthetic populace. All sapient organic life has been wiped out."
  planet_destruction.301.infested.desc:0 "The [From.From.GetName]'s neutron plume peters out, having finished its sweep of [From.GetName]'s surface.\n\nA quick scan confirms that the infested landscape, previously a roiling and writhing mass of organic activity, is now bereft of all life. Only barren rock remains."
  planet_destruction.401.name:0 "Faith Enforced"
- planet_destruction.401.desc:0 "The empyral hum of the [From.From.GetName]'s psionic coils fades, and for a moment all is quiet. Down on [From.GetName] the people stand slack-jawed (or local physiognomic equivalent), enraptured by the powerful and personal truths the psionic ray unfetters from the tangled web of their minds.\n\nIf they did not understand before, they know now viscerally; we are all part of something greater."
+ planet_destruction.401.desc:0 "The empyreal hum of the [From.From.GetName]'s psionic coils fades, and for a moment all is quiet. Down on [From.GetName] the people stand slack-jawed (or local physiognomic equivalent), enraptured by the powerful and personal truths the psionic ray unfetters from the tangled web of their minds.\n\nIf they did not understand before, they know now viscerally: we are all part of something greater."
  planet_destruction.401.tooltip:0 "Any §Y$trait_mechanical$§!, §Y$trait_machine_unit$§! or §Y$trait_hive_mind$§! Pops are §Rdestroyed§! by the psionic resonance.\n\nAll remaining §Ybiological§! Pops become §Y$ethic_spiritualist$§!.\n\nAdds the §Y$god_rayed$§! modifier to [This.GetName] for §Y10 years§!:\nSpiritualist Ethics Attraction: §Y+999%§!."
  planet_destruction.501.name:0 "Nanobots Dispersed"
  planet_destruction.501.desc:0 "The [From.From.GetName] has completed deployment of the assimilation nanobot payload, calculated to be sufficient to cybernetically dominate all sapient organics on [From.GetName].\n\nWe did not build the [From.From.GetName] with any sensors or instruments to measure our success, but we know. We open our eyes for the first time down on [From.GetName]. We see ourselves and are seen by ourselves.\n\nOn [From.GetName]'s surface, there is only us."
@@ -403,7 +416,7 @@
  apoc.1.name:0 "เกตเวย์ที่ถูกทิ้งร้าง"
  apoc.1.desc:0 "An ancient space station of some kind has been located at the edge of the [gateway_system.GetName] system. The strong residual subspace signature that surrounds the station indicates that it may be a "§HGateway§!" of sorts - part of a theoretical network of similar stations that at some point would have allowed for near-instantaneous travel between different parts of the galaxy.\n\nAssuming this is a Gateway, its current state of disrepair has rendered it unusable. If it could be restored into working order, its owner would potentially be able to access any other functional gateways in the galaxy, enabling travel across huge distances in a matter of days."
  apoc.2.desc:0 "We have encountered another abandoned Gateway, this time in the [gateway_system.GetName] system. Just like the first one, this Gateway is also currently inoperable due to its poor condition."
- apoc.3.desc:3 "We have located what we believe could be an ancient subspace Gateway near §H[gateway_system.GetName]§!. It appears to have been part of a galaxywide network of similar stations which, when operational, allowed for near-instantaneous travel from one part of the galaxy to another.\n\nAt some point after its initial construction its connection to the rest of the network was severed. It now offers only one valid destination - an uncharted group of stars just beyond our galaxy that our astronomers have designated the §HL-Cluster§!. Even more intriguing, the Gateway was built entirely by microscopic §HNanites§! of an unknown design.\n\nAlthough the Gateway emits a faint power signature, it has been deliberately locked into some kind of maintenance loop that prevents its activation. Until we find some way of aborting this process, the L-Cluster will remain beyond our reach."
+ apoc.3.desc:3 "We have located what we believe could be an ancient subspace Gateway near §H[gateway_system.GetName]§!. It appears to have been part of a galaxy-wide network of similar stations which, when operational, allowed for near-instantaneous travel from one part of the galaxy to another.\n\nAt some point after its initial construction its connection to the rest of the network was severed. It now offers only one valid destination - an uncharted group of stars just beyond our galaxy that our astronomers have designated the §HL-Cluster§!. Even more intriguing, the Gateway was built entirely by microscopic §HNanites§! of an unknown design.\n\nAlthough the Gateway emits a faint power signature, it has been deliberately locked into some kind of maintenance loop that prevents its activation. Until we find some way of aborting this process, the L-Cluster will remain beyond our reach."
  apoc.5.name:0 "รูหนอนธรรมชาติ"
  apoc.5.desc:0 "We have detected what appears to be a naturally occurring subspace phenomenon on the edge of the §H[wormhole_system.GetName]§! system! A rift in the very fabric of space-time has formed here, creating a "§Hwormhole§!" that, our [Root.Owner.GetScientistPlural] speculate, may provide a conduit through subspace to another wormhole located somewhere else in our galaxy.\n\nDepending on where the second wormhole is located, this could potentially allow ships to travel from one end of the galaxy to the other in a matter of days. Unfortunately, this wormhole, like the vast majority of its kind, is inherently unstable. Any vessels foolish enough to pass through it would be ripped apart in seconds."
  apoc.5.a:0 "If it could somehow be stabilized..."
@@ -658,5 +671,5 @@
  WAROVERVIEW_BATTLE_THEIR_ARMIES_LOST:0 "$NUM|G$ armies lost"
  OCCUPATION_SUMMARY:0 "Occupation"
  OCCUPATION_SUMMARY_LONG:0 "Occupation $ATTR|R$ due to $SYSTEMS|R$ occupied systems and $PLANETS|R$ occupied planets"
- FLEET_TEMPLATE_COMMAND_MAX_MULTIPLE:0 "Adding $NUM|Y$ ships would go over the fleet command limit."
+ FLEET_TEMPLATE_COMMAND_MAX_MULTIPLE:0 "การเพิ่มยาน $NUM|Y$ ลำ จะทำให้เกินขีดจำกัดคำสั่ง"
  FLEET_TEMPLATE_COMMAND_MIN_MULTIPLE:0 "Cannot remove $NUM|Y$ ships from the fleet template"
