--- a/mod/thmod/localisation/english/leviathans_l_english.yml
+++ b/mod/thmod/localisation/english/leviathans_l_english.yml
@@ -244,7 +244,7 @@
  leviathans.307.desc:1 "Our economy cannot support being a patron of the Artisan Troupe anymore. They will no longer receive funding from our empire. This will surely sour our relationship with the enclave."
  leviathans.307.a.tooltip:0 "§RRemoves§! the empire modifier §Y$enclave_artist_patron$§!"
  leviathans.335.name:0 "The Outrage"
- leviathans.335.desc:1 "The §YFestival of Worlds§! organized by the Artisan Troupe had, for a time, brought joy to the people of the [Root.GetName]. Alas, it was not meant to last.\nOn [this_planet.GetName], festival activities have resulted in a huge crowd stampeding and killing thousands of citizens. It is not clear what circumstances led to this tragic loss of life, but there is now growing restnment towards our administration and the festival's organisers alike."
+ leviathans.335.desc:1 "The §YFestival of Worlds§! organized by the Artisan Troupe had, for a time, brought joy to the people of the [Root.GetName]. Alas, it was not meant to last.\nOn [this_planet.GetName], festival activities have resulted in a huge crowd stampeding and killing thousands of citizens. It is not clear what circumstances led to this tragic loss of life, but there is now growing resentment towards our administration and the festival's organizers alike."
  leviathans.335.b:0 "Divert the media's attention."
  leviathans.336.name:0 "The Joy"
  leviathans.336.desc:1 "Due to the overabundance of happiness being spread by the §YFestival of Worlds§!, some of the event's organizers have begun to fall in love with our way of life. They claim they wish to remain here; to settle down and become a part of our empire."
@@ -308,6 +308,9 @@
  leviathans.500.d:1 "เราสามารถรับจ้าง§Yนักวิทยาศาสตร์§!ของคุณได้ไหม?"
  leviathans.500.d.alreadyrecruited:0 "We already employ a Curator scientist."
  leviathans.500.d.opinion:0 "ต้องการ §Yผู้ดูแลพิพิธภัณฑ์§! ให้มี:\n£opinion£ ทัศนคติ +50"
+ leviathans.500.e:0 "Can you share the fundamental principles of knowledge?"
+ leviathans.500.e.alreadyshared:0 "We have already shared the Curator principles."
+ leviathans.500.e.opinion:0 "$leviathans.500.d.opinion$"
  leviathans.500.h:1 "คุณช่วยบอกเราเกี่ยวกับ §Yลูกค้าคนอื่นๆของคุณ§!?"
  leviathans.500.i:0 "คุณรู้อะไรเกี่ยวกับ §Y$lgates$§!?"
  leviathans.500.i.tooltip.noclue:2 "It takes the [curator_enclave_country.GetName] approximately a decade to identify each new §Y$clue$§!."
@@ -385,6 +388,11 @@
  leviathans.590.a:0 "Of course. You shall have your donation."
  leviathans.590.a.reply:0 "Excellent. You will now have unfettered access to one of the greatest minds of our time!"
  leviathans.590.tt_scientist:0 "We may only employ §Yone§! §HCurator scientist§! at a time."
+ leviathans.598.name:0 "Shared Principles"
+ leviathans.598.desc:0 "We are willing to infuse your collective with the fundamental principles of knowledge. A serious procedure, and one only available to a shared consciousness.\n\nEven for us, it is no easy thing to achieve. The cost is not insignificant. But of all commodities, knowledge remains the most precious."
+ leviathans.598.a:0 "$leviathans.590.a$"
+ leviathans.598.a.reply:0 "A sound investment."
+ leviathans.598.tt_principles:0 "The fundamental principles of the Curators have already been shared with us."
  leviathans.599.name:0 "Buy Intelligence"
  leviathans.599.desc:0 "Since you are one of our trusted customers, we are able to divulge to you certain information on our... less favored clients. What you do with this information is entirely up to you, of course.\n\nWho do you want to know about?"
  leviathans.599.a:0 "Tell us about the [curator_customer_1.GetName]."
@@ -687,7 +695,7 @@
  leviathans.3102.b:0 "It would be a waste of resources. Salvage it for parts."
  leviathans.3103:0 "Dreadnought Repaired"
  leviathans.3103.desc:0 "This is a momentous day! Our skilled repair crews and engineers have finished their work on the ancient dreadnought we disabled in the [guardians_dreadnought_system.GetName] system. The massive warship has received its full crew complement and been declared ready for service after conducting space trials."
- leviathans.3103.desc.mach:0 "This is a day of significance! Our skilled repairbots and engineering units have finished their work on the ancient dreadnought we disabled in the [guardians_dreadnought_system.GetName] system. The massive warship has received its full crew complement and been declared ready for service after conducting space trials."
+ leviathans.3103.desc.mach:0 "This is a day of significance! Our skilled repair bots and engineering units have finished their work on the ancient dreadnought we disabled in the [guardians_dreadnought_system.GetName] system. The massive warship has received its full crew complement and been declared ready for service after conducting space trials."
  leviathans.3103.a:0 "A powerful addition to our fleet."
  leviathans.3201:0 "Swarming Hive Craft"
  leviathans.3201.desc:0 "Fast-moving attack craft are hitting our mining stations in the [hiver_system.GetName] system! These unidentified aggressors swarmed out of several previously dormant asteroids in the belt that are now displaying huge power signatures.\n\nWe can only surmise that these asteroids serve as some kind of hive for a previously unknown spaceborne life form. Whatever they are, our expanding mining operations seem to have provoked them into action!"
