--- a/mod/thmod/localisation/english/nemesis_content_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_content_l_english.yml
@@ -25,7 +25,7 @@
  CRISIS_SPECIAL_PROJECT_MACH_2:0 "$CRISIS_SPECIAL_PROJECT_2$"
  CRISIS_SPECIAL_PROJECT_MACH_2_DESC:1 "Scientific theory subroutines have produced a hypothesis that there are tangible links between the known universe and dimension ID: 'the Shroud'. Further experimentation and mapping of these supposed connections is advised.\n\n$CRISIS_SPECIAL_PROJECTS_TUTORIAL$"
  crisis.4125.mach.name:0 "$crisis.4125.name$"
- crisis.4125.mach.desc:1 "The substantial amount of data from the tests of potential ripple effects related to ID: 'the Shroud' has been processed and analyzed. The connection between ID: 'Reality' and ID: 'the Shroud' has been verified (error margin: <0.02%).\n\nExplicit patterns have been established, and the currently held hypothesis suggests that through further study and effort, the energy can be eventually be directed and utilized to our benefit.\nPriority: High."
+ crisis.4125.mach.desc:2 "The substantial amount of data from the tests of potential ripple effects related to ID: 'the Shroud' has been processed and analyzed. The connection between ID: 'Reality' and ID: 'the Shroud' has been verified (error margin: <0.02%).\n\nExplicit patterns have been established, and the currently held hypothesis suggests that through further study and effort, the energy can eventually be directed and utilized to our benefit.\nPriority: High."
  crisis.4125.mach.a:0 "ดำเนินการต่อ"
  CRISIS_SPECIAL_PROJECT_HIVE_2:0 "$CRISIS_SPECIAL_PROJECT_2$"
  CRISIS_SPECIAL_PROJECT_HIVE_2_DESC:1 "Our finest $job_brain_drone_plural$ have confirmed a connection between this realm and the Shroud. We must find more ways to interact with this new layer of reality.\n\n$CRISIS_SPECIAL_PROJECTS_TUTORIAL$"
@@ -151,7 +151,7 @@
  unlocks_menace_objectives:0 "Allows the accumulation of £menace£ §YMenace§! by completing §HMenace Objectives§!.\n"
  menp_megastructure:0 "Aetherophasic Engine"
  menp_megastructure_desc:0 "The Aetherophasic Engine will rip apart the barriers that exist between this world and the Shroud."
- unlocks_crisis_sphere:0 "§Hปลดล็อกสิ่งก่อสร้างขนาดใหญ่:§! $crisis_sphere_0$\n"
+ unlocks_crisis_sphere:0 "§Hปลดล็อกสิ่งก่อสร้างขนาดมหึมา:§! $crisis_sphere_0$\n"
  espionage.10.name:0 "Spy Network Formed"
  espionage.10.desc:2 "Our presence in the §Y[from.target.GetName]§! has taken on a clandestine aspect. $role_spymaster$ [from.leader.GetName] is now situated at the core of a burgeoning §HSpy Network§! in [from.target.GetAdj] space."
  espionage.11.name:0 "Spy Network Installed"
@@ -184,7 +184,7 @@
  espionage.1001.a:1 "Former agents are to be disavowed. Ignore this."
  espionage.1001.b:0 "Ready an extraction team."
  espionage.1005.name:0 "An Insistent Former Operative"
- espionage.1005.desc:1 "We've received another encrypted message from within the §Y[disavowed_agent_country.GetName]§!, employing a different cypher this time. Our supposed, once-lost operative claims that the knowledge they hold puts their life at extreme risk. They say that if we do not extract and debrief them, they must consider §Hdefecting§!."
+ espionage.1005.desc:1 "We've received another encrypted message from within the §Y[disavowed_agent_country.GetName]§!, employing a different cipher this time. Our supposed, once-lost operative claims that the knowledge they hold puts their life at extreme risk. They say that if we do not extract and debrief them, they must consider §Hdefecting§!."
  espionage.1005.a:0 "An empty and suspicious threat. Continue to ignore."
  espionage.1005.b:0 "Fine. $espionage.1001.b$"
  espionage.1005.c:0 "Eliminate this 'operative'."
@@ -209,7 +209,7 @@
  espionage.1022.desc:3 "It appears we acted too hastily in trying to extract our supposed, §Hdisavowed operative§!. We have entirely lost contact with the team of operatives we dispatched to the §H[disavowed_agent_country.GetName]§!. We now suspect that the operative never existed.\n\nAll operatives who were associated with this endeavor have been disavowed. As a result, our ability to conduct further operations in the [disavowed_agent_country.GetName] will be restricted for a time as the Spy Network recovers."
  espionage.1022.a:0 "This does not bode well."
  espionage.1030.name:0 "Hiding in Vivid Sight"
- espionage.1030.desc:2 "Some of the operatives we control in the §H[vividsight_country.GetName]§! are beginning to draw unusual amounts of attention; they are regarded as somehow... attractive?\n\nWe have no reason to believe their cover identities are in jeopardy, but their growing notoreity and influence put strain on the deniability of our Spy Network."
+ espionage.1030.desc:2 "Some of the operatives we control in the §H[vividsight_country.GetName]§! are beginning to draw unusual amounts of attention; they are regarded as somehow... attractive?\n\nWe have no reason to believe their cover identities are in jeopardy, but their growing notoriety and influence put strain on the deniability of our Spy Network."
  espionage.1030.a:0 "This could be advantageous, if managed well."
  espionage.1030.b.hive:0 "This will not do. Arrange for 'adjustments'."
  espionage.1030.b.machine:0 "This will not do. Adjust their parameters."
@@ -267,7 +267,7 @@
  espionage.1085.name:0 "Implicated in a Plot"
  espionage.1085.desc:1 "We have been implicated in a plot against the §H[from.GetName]§!. So vague is the allegation that we cannot definitively state whether or not they are on to something.\n\nOur own spies protest that the allegation is baseless, claiming this is likely either a defensive, counter-espionage response from one of our targets - or else a smear campaign being conducted by some third party. Whatever the reason or cause, the [from.GetName] have taken offense."
  espionage.1085.desc.neverspied:0 "Amazingly, we have been implicated in some vaguely-defined plot against the §H[from.GetName]§!. It's a ridiculous allegation, given our complete lack of foreign espionage activity so far - but then, the [from.GetAdj] would have no way of knowing how truly ridiculous the allegation is.\n\nIt would seem that parties unknown are attempting to frame us for their own misdemeanors - or perhaps simply to sow some diplomatic chaos. Whatever the reason or cause, the [from.GetName] have taken offense."
- operation.1000.name:0 "Mobilising Operatives"
+ operation.1000.name:0 "Mobilizing Operatives"
  operation.1000.desc.hostile:0 "Our deep-cover operatives have stepped-up their surveillance on potential targets."
  operation.1000.desc.friendly:0 "Our 'spotters' have begun ingratiating themselves with targets we've marked as potentially useful."
  operation.1001.name:0 "Narrowing the Field"
@@ -330,7 +330,7 @@
  operation.2000.name:2 "Approaching Target in [target.solar_system.GetName]"
  operation.2000.desc.intro.friendly:1 "A small and select group of operatives has departed for the §Y[target.owner.GetName]§! under tight aliases."
  operation.2000.desc.jobseeker:2 "$operation.2000.desc.intro.friendly$ Each will pose as a worker seeking employment. Some are carrying statements of recommendation and will seek work close to key facilities; others will try their luck in shadier parts of the installation."
- operation.2000.desc.vendor:1 "$operation.2000.desc.intro.friendly$ Amongst them is a supposed family of artisans, seeking new business oportunities. They will try to establish a retail presence on §H[target.GetName]§! in order to sell their wares."
+ operation.2000.desc.vendor:1 "$operation.2000.desc.intro.friendly$ Amongst them is a supposed family of artisans, seeking new business opportunities. They will try to establish a retail presence on §H[target.GetName]§! in order to sell their wares."
  operation.2000.desc.intro.hostile:1 "A batch of operatives has left for the §Y[target.owner.GetName]§!. Their cover involves piloting a nondescript cargo vessel."
  operation.2000.desc.cargo:1 "$operation.2000.desc.intro.hostile$ Its hold is packed with what will appear to [target.owner.GetAdj] scanners as $rare_crystals$ and other precious minerals. We trust that the bare-faced simplicity of this strategy will serve as its own bluff."
  operation.2000.desc.derelict:1 "$operation.2000.desc.intro.hostile$ The ship is rigged for a non-lethal explosion as it approaches the [target.owner.GetAdj] border - as close as it can get to the §H[target.solar_system.GetName] system§!. Radiation will appear to flood the interior of the vessel as our operatives secrete themselves within its invisibly-shielded core."
@@ -585,7 +585,7 @@
  manifesti.10.desc:0 "Our efforts to apprehend members of §HThe Manifesti§! proved difficult, but have now yielded results. Once the slew of sympathetic pretenders could be sorted from the actual instigators, all Manifesti activities stopped.\n\nA great deal of public scrutiny is now coming to bear on our attitudes towards censorship, not least because this movement had encouraged such liberal thinking. Nevertheless, there has been a marked decline in vandalism and other civil distractions."
  manifesti.10.a:0 "Let us hope that's the end of such nonsense."
  manifesti.15.name:0 "Pictures Grunt a Thousand Words"
- manifesti.15.desc:0 "A subversive dialect has taken root within our art centers and educational institutions. Its origins lie in another project penned by §HThe Manifesti§!.\n\nLinguists note that in this so-called 'Uslurp-Speak', all words relating to our economy have been replaced with expressive grunts. More worryingly, its many and colourful insults all seem to derive from the names of prominent military figures. This has drawn formal complaints from the individuals' families."
+ manifesti.15.desc:0 "A subversive dialect has taken root within our art centers and educational institutions. Its origins lie in another project penned by §HThe Manifesti§!.\n\nLinguists note that in this so-called 'Uslurp-Speak', all words relating to our economy have been replaced with expressive grunts. More worryingly, its many and colorful insults all seem to derive from the names of prominent military figures. This has drawn formal complaints from the individuals' families."
  manifesti.15.a:0 "Keep an eye on this, for now."
  manifesti.15.b:0 "This crosses a line, and demands a swift response."
  manifesti.20.name:0 "Mirrors, Brightly"
@@ -615,7 +615,7 @@
  manifesti_reflections_mod:0 "Deep Reflections"
  manifesti_reflections_mod_desc:0 "A popular Manifesti art installation invites visitors to play with their concepts of selfhood and how they perceive others, renewing interest in the social sciences."
  manifesti_sweet_dreams_mod:0 "Dreams Become Manifesti"
- manifesti_sweet_dreams_mod_desc:0 "The avant-garde Manifesti group has disbanded, leaving behind a legacy in socioligical case studies and low-level civilian anarchy."
+ manifesti_sweet_dreams_mod_desc:0 "The avant-garde Manifesti group has disbanded, leaving behind a legacy in sociological case studies and low-level civilian anarchy."
  pft_manifesti:0 "Manifesti Faction"
  pft_manifesti_desc:0 "Manifesti Factions hold to unusual and diverse goals, desiring freedom of expression and non-discrimination within reformed social structures.\n\n§LEgalitarian Ethos§!"
  MANIFESTI_RIVERS_MOVEMENT:0 "Alluvio-Liberalism"
@@ -743,7 +743,7 @@
  operative_facilitator:0 "facilitator"
  operative_fixer:0 "fixer"
  operative_informant:0 "informant"
- operative_warehouse:0 "warehouse properietor"
+ operative_warehouse:0 "warehouse proprietor"
  role_spymaster:0 "Spymaster"
  DISAVOW:0 "ปฏิเสธ"
  APPALLING:0 "An appalling act."
@@ -777,7 +777,7 @@
  resolution_custodian_extend_custodianship_desc:0 "Making the galaxy a better place is a monumental task that takes time. The current Custodianship needs to be extended by another term if anything with lasting effects is to be accomplished."
  resolution_custodian_extend_custodianship_tooltip:1 "The term limit of the current §YCustodians§! is extended by another §Y30 years§!."
  resolution_custodian_perpetual_custodianship:1 "Remove Custodianship Term Limit"
- resolution_custodian_perpetual_custodianship_desc:0 "The current Custodians have proven themselves irreplacable guardians of the Community. Their stalwart service to the galaxy must be allowed to continue indefinitely."
+ resolution_custodian_perpetual_custodianship_desc:0 "The current Custodians have proven themselves irreplaceable guardians of the Community. Their stalwart service to the galaxy must be allowed to continue indefinitely."
  resolution_custodian_perpetual_custodianship_tooltip:0 "The current §YCustodianship§! will continue in perpetuity."
  resolution_custodian_end_custodianship:0 "End Custodianship"
  resolution_custodian_end_custodianship_desc:0 "The Galactic Community no longer has a need for a Custodian. As such, the Custodianship should be terminated before the term limit is up."
@@ -1124,7 +1124,7 @@
  emperor.301.name:0 "The Rebirth of the Community"
  emperor.301.desc:1 "The end is here. As the remaining Imperial forces surrender en masse or melt away into the night, it has become evident that the Imperium is dying.\n\nEven now, the §H[dissolve_winner.GetName]§! has begun the work of rebuilding the old §HGalactic Community§!. Imperial banners are being torn down or put to the flame across the galaxy. A new future is upon us."
  emperor.301.a:0 "We must find our place in it."
- emperor.302.desc:1 "The Galactic Imperium has fallen. With Imperial forces melting away or surrendering en masse, the Imperium's sovereign has abdicated.\n\nAs order is slowly restored to the wartorn systems of the former Imperium, the §H[dissolve_winner.GetName]§! has seen fit to resurrect the old §HGalactic Community§!. We have received a membership invitation. Should we join?"
+ emperor.302.desc:1 "The Galactic Imperium has fallen. With Imperial forces melting away or surrendering en masse, the Imperium's sovereign has abdicated.\n\nAs order is slowly restored to the war-torn systems of the former Imperium, the §H[dissolve_winner.GetName]§! has seen fit to resurrect the old §HGalactic Community§!. We have received a membership invitation. Should we join?"
  emperor.302.a:0 "Of course! It is time to rejoin the galaxy."
  emperor.302.b:1 "No. It could turn into another Imperium."
  emperor.310.name:0 "The [new_emperor.GetGalEmpireName]"
@@ -1186,7 +1186,7 @@
  action.48.desc.machine.3:0 "§YAttempting to reestablish connection with drones......§!\n§RFAILED.§!§Y Rerouting...§!\n§YAttempting to reestablish connection with fleet units.....§!\n§RFAILED.§! §YRerouting...§!\n§YAttempting to reestablish connection with planetary control hubs......§!\n§RFAILED.§! §YRerouting...§!"
  action.48.desc.fe_spiritualist:0 "This... this is not the ending that was foretold."
  action.48.desc.fe_materialist:0 "The gates are smashed... the barbarians have broken through. This is the end!"
- action.48.desc.fe_xenophobe:0 "Do you want us to growel, [Root.GetSpeciesNamePlural]? Beg, perhaps?\n\n§HNEVER!§!\n\nCome here if you dare, you vile [Root.GetSpeciesNameInsult]! I will impale you on this jagged piece of rubble!"
+ action.48.desc.fe_xenophobe:0 "Do you want us to grovel, [Root.GetSpeciesNamePlural]? Beg, perhaps?\n\n§HNEVER!§!\n\nCome here if you dare, you vile [Root.GetSpeciesNameInsult]! I will impale you on this jagged piece of rubble!"
  action.48.desc.fe_xenophile:0 "Oh, you foolish, foolish [Root.GetSpeciesNamePlural]. This could have been avoided if only you had allowed us to guide you! Now look what you have done."
  action.48.desc.gal_emperor:1 "Long live the [From.GetRulerTitle]! Long live the Imperium!"
  action.48.a:0 "We accept your surrender."
@@ -1775,7 +1775,7 @@
  emperor.350.a:0 "The coming battles will decide our future."
  emperor.351.name:0 "Imperial Crusade Commences"
  emperor.351.a.desc:0 "Powerful fleets are mobilizing all across the Galactic Imperium as the great crusade against the §H[crusade_target.GetName]§! begins. To many observers, it seems unfathomable that any outside power could hope to prevail against the combined might of the Imperium, but the coming battles will determine the outcome."
- emperor.351.b.desc:0 "Powerful fleets are mobilizing all across the Galactic Imperium as the great crusade against the §H[crusade_target.GetName]§! begins. This Fallen Empire has endured for millenia, yet the [gal_emperor.GetRulerTitle] seems confident that the combined might of the Imperium will be enough to finally bring it under the heel of the younger races."
+ emperor.351.b.desc:0 "Powerful fleets are mobilizing all across the Galactic Imperium as the great crusade against the §H[crusade_target.GetName]§! begins. This Fallen Empire has endured for millennia, yet the [gal_emperor.GetRulerTitle] seems confident that the combined might of the Imperium will be enough to finally bring it under the heel of the younger races."
  emperor.351.a:0 "For the Imperium!"
  emperor.351.b:0 "It begins."
  emperor.351.c:0 "Are we next?"
