--- a/mod/thmod/localisation/english/observer_events_l_english.yml
+++ b/mod/thmod/localisation/english/observer_events_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
  observer.15.name:0 "Return of the Great Khan"
- observer.15.desc:0 "After having met with defeat in battle, the Great Khan has marshaled yet another fleet and is even now returning to the frontlines."
+ observer.15.desc:0 "After having met with defeat in battle, the Great Khan has marshaled yet another fleet and is even now returning to the front lines."
  observer.24.name:0 "[marauder_mercenary_country.GetSpeciesName] Mercenaries"
  observer.24.desc:0 "[marauder_mercenary_country.GetSpeciesName] mercenaries are now available for hire."
  observer.56.desc:0 "Archeologists from the §H[From.GetName]§! have managed to deduce the secret location of the §HVultaum§! home system!"
@@ -14,7 +14,7 @@
  observer.66.desc:0 "The §H[From.GetName]§! have successfully unlocked the L-Cluster, only to reveal that it is already inhabited by an advanced civilization known as the §HDessanu Consonance§!!"
  observer.68.desc:1 "The careless fools of the §H[From.GetName]§! have meddled with forces beyond their understanding, unleashing a powerful and vengeful Shroud Avatar in the §H[shroud_spawn_system.GetName]§! system!"
  observer.70.name:0 "The Horizon Signal"
- observer.70.desc:0 "Scientists from the §H[From.Owner.GetName]§! have picked up a mysterious signal that appears to eminate from the center of a black hole..."
+ observer.70.desc:0 "Scientists from the §H[From.Owner.GetName]§! have picked up a mysterious signal that appears to emanate from the center of a black hole..."
  observer.71.name:0 "The Worm"
  observer.71.desc:0 "The Worm-in-Waiting has remade the home system of the §H[From.Owner.GetName]§! into something... different."
  observer.72.desc:0 "The Worm-in-Waiting has manifested itself in the home system of the §H[From.Owner.GetName]§!. Battle is joined..."
