--- a/mod/thmod/localisation/english/overlord_mega_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_mega_l_english.yml
@@ -4,7 +4,7 @@
  orbital_ring_tier_1:0 "สถานีอวกาศวงแหวนโคจร"
  orbital_ring_tier_1_DESC:1 "This Starbase variant encircles the planet, providing space for Modules, Buildings, and Defense Platforms."
  orbital_ring_tier_1_plural:0 "สถานีอวกาศวงแหวนโคจร"
- allow_orbital_rings:0 "§Hปลดล็อกสิ่งก่อสร้างขนาดใหญ่:§! $orbital_ring_tier_1$"
+ allow_orbital_rings:0 "§Hปลดล็อกสิ่งก่อสร้างขนาดมหึมา:§! $orbital_ring_tier_1$"
  orbital_ring_tier_2:0 "สถานีอวกาศวงแหวนโคจร Tier 2"
  orbital_ring_tier_2_plural:0 "สถานีอวกาศวงแหวนโคจร Tier 2"
  orbital_ring_tier_3:0 "สถานีอวกาศวงแหวนโคจร Tier 3"
@@ -117,7 +117,7 @@
  FLEETORDER_ENTERING_BYPASS_EXT:1 "Transiting via $BYPASS_TYPE|H$ to $SYSTEM|H$\nProgress: $CUR|Y0$/$COST|Y0$ ( $DAYS|Y$ Days )"
  mod_relay_bypass_windup_empire_mult:1 "Reduced delays to transit speed through $hyper_relay_plural$"
  mod_relay_bypass_windup_ship_mult:1 "$mod_relay_bypass_windup_empire_mult$"
- MOD_COUNTRY_MIA_TIME_MULT:2 "เวลาที่ใช้เมื่อสูญหายในระหว่างปฏิบัติภาระกิจลดลง"
+ MOD_FLEET_MIA_TIME_MULT:3 "เวลาที่ใช้เมื่อสูญหายในระหว่างปฏิบัติภาระกิจ"
  OPEN_ORBITAL_RING:0 "เปิดสถานีอวกาศวงแหวนโคจร"
  OPEN_PLANET_VIEW:0 "Open Planet View"
  sm_ring_energy_hub:0 "เครื่องสตราโตสเฟียร์ไอออไนเซชัน"
@@ -161,7 +161,7 @@
  over.10.desc:1 "The final refinements have been made to the $quantum_catapult_3$ and it is now fully online. Both range and accuracy have been improved."
  over.10.a:0 "To infinity and beyond!"
  over.20.name:0 "$quantum_catapult_ruined$"
- over.20.a.desc:0 "A massive field of debris orbits the pulsar in the [quantum_catapult_system.GetName] system. Our scientists theorize that the partially intact structure in the densest portion of the field somehow harnessed the power of the star to launch objects incredible distances.\n\nIf we developed the knowledge to work on great megatructures, we could repair this §Y$quantum_catapult_3$§!."
+ over.20.a.desc:0 "A massive field of debris orbits the pulsar in the [quantum_catapult_system.GetName] system. Our scientists theorize that the partially intact structure in the densest portion of the field somehow harnessed the power of the star to launch objects incredible distances.\n\nIf we developed the knowledge to work on great megastructures, we could repair this §Y$quantum_catapult_3$§!."
  over.20.b.desc:0 "A massive field of debris orbits the pulsar in the [quantum_catapult_system.GetName] system - the structure in the center is similar to that of our own §Y$quantum_catapult_3$§! designs. With extensive repairs, we could return it to service."
  over.20.a:0 "Imagine having two!"
  over.25.name:0 "$quantum_catapult_3$ Restored"
@@ -183,7 +183,7 @@
  FLEETORDER_APPROACHING_BYPASS:1 "Approaching $BYPASS_TYPE|H$"
  over.100.title:1 "Relay Links Forged"
  over.100.a.desc:0 "It is done. Today, we present the galaxy with one of our grandest accomplishments yet: the joining of our Hyper Relay network with that of our friends, the §Y[from.GetName]§!.\n\nLavish ceremonies have been held throughout the [root.GetName], unanimously heralding this proud new link we share. It is said that for the moment, all petty jealousies have been forgotten; all apathies and indifferences cast aside. Blended with this sense of pride and ambition is a shared confidence in the days to come. Working side by side we have torn down a barrier we once thought insurmountable, ushering in a new age of mutual prosperity and friendship."
- over.100.b.desc:0 "Today we have etched ourselves further into a record of unparalled galactic splendor. With the linking of our Hyper Relay network to that of the §Y[from.GetName]§!, our citizens may now venture into those neighboring systems without let or hindrance.\n\nThe [from.GetAdj], in turn, now welcome the embrace of our rich [root.GetAdj] influence. They too shall benefit from the bountious culture which defines our own, magnificent star systems."
+ over.100.b.desc:0 "Today we have etched ourselves further into a record of unparalleled galactic splendor. With the linking of our Hyper Relay network to that of the §Y[from.GetName]§!, our citizens may now venture into those neighboring systems without let or hindrance.\n\nThe [from.GetAdj], in turn, now welcome the embrace of our rich [root.GetAdj] influence. They too shall benefit from the bounteous culture which defines our own, magnificent star systems."
  over.100.c.desc:0 "The galaxy presents one less hurdle to us today, as our co-operative effort with the [from.GetName] has reached a fruitful conclusion. The last link in our adjoining Hyper Relay networks has been brought online, inviting both partners into rapid transit across our shared border.\n\nWhat awaits us now is a journey into the unknown, for every aspect of this arrangement - positive or negative - applies equally to us and the [from.GetName]. We shall see how well our neighbors hold to this symbol of mutual trust."
  over.100.a:1 "A proud day for all."
  over.100.b:1 "Profit without borders!"
