--- a/mod/thmod/localisation/english/overlord_subjects_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_subjects_l_english.yml
@@ -499,7 +499,7 @@
  holding_dread_outpost:0 "Dread Outpost"
  holding_dread_outpost_desc:0 "The Dread Outpost is an arcane structure that produces unholy reanimated armies while sending back insidious data to this planet's Overlord."
  holding_communal_housing_outreach:0 "ที่อยู่อาศัยของชุมชนที่แผ่ออกไป"
- holding_communal_housing_outreach_desc:0 "Everyone is entitled to a home, which is why the Ovelord have extended their Communal Housing Project to this planet. This serves as a great forum for teaching the inhabitants the value of egalitarianism."
+ holding_communal_housing_outreach_desc:0 "Everyone is entitled to a home, which is why the Overlord has extended their Communal Housing Project to this planet. This serves as a great forum for teaching the inhabitants the value of egalitarianism."
  holding_idyllic_bloom:0 "Gaia Seeder Outpost"
  holding_idyllic_bloom_desc:0 "Hyper-advanced terraforming techniques mastered by the Overlord are housed in this structure. After being introduced to the planet, it will take a decade to finish its world-changing work."
  holding_idyllic_bloom_effect_timer:0 "Will finish terraforming on §Y[Planet.idyllic_bloom_holding_timer]§!."
@@ -646,7 +646,7 @@
  job_overlord_propagandist_drone_plural:0 "$job_overlord_propagandist_plural$"
  mod_job_overlord_propagandist_add:1 "$job_overlord_propagandist$ Jobs"
  mod_job_overlord_propagandist_drone_add:0 "$mod_job_overlord_propagandist_add$"
- job_overlord_propagandist_desc:1 "Propagandists working for the local ministry are experts at infilitrating and defusing situations among the locals."
+ job_overlord_propagandist_desc:1 "Propagandists working for the local ministry are experts at infiltrating and defusing situations among the locals."
  job_overlord_propagandist_drone_desc:0 "Diplomatically equipped drones who are experts at defusing rebellious thoughts and ideas."
  job_overlord_propagandist_effect_desc:1 "£job_overlord_propagandist£ $job_overlord_propagandist_plural$ turn Subject $r_unity$ into $r_influence$ for the Overlord."
  job_overlord_propagandist_drone_effect_desc:0 "$job_overlord_propagandist_effect_desc$"
@@ -814,7 +814,7 @@
  planet_overlord_managers:0 "Overlord Managers"
  job_overlord_manager_plural:0 "Overlord Managers"
  mod_job_overlord_manager_add:0 "$job_overlord_manager$ Jobs"
- job_overlord_manager_desc:0 "Middle managers that optimize the behavior of the local white-collar workers to syngerize with the Overlord's long-term corporate trajectory."
+ job_overlord_manager_desc:0 "Middle managers that optimize the behavior of the local white-collar workers to synergize with the Overlord's long-term corporate trajectory."
  job_overlord_manager_effect_desc:0 "£job_manager£ $job_overlord_manager_plural$ turn £consumer_goods£ §Y$consumer_goods$§! into £unity£ §YUnity§! and £mod_trade_value_add£ §Y$TRADE_VALUE$§! for the Subject, and £unity£ §YUnity§! for the Overlord."
  planet_holdings:0 "การถือครอง"
  planet_overlord_propagandists:0 "Overlord Propagandists"
@@ -841,6 +841,9 @@
  r_unity:1 "£unity£ §Y$unity$§!"
  r_influence:1 "£influence£ §Y$influence$§!"
  r_research:1 "£physics£ £society£ £engineering£ §YResearch Points§!"
+ r_physics:0 "£physics£ §Yการวิจัยฟิสิกส์§!"
+ r_society:0 "£society£ §Yการวิจัยสังคม§!"
+ r_engineering:0 "£engineering£ §Yการวิจัยวิศวกรรม§!"
  r_amenities:1 "£amenities£ §Yความอยู่ดีกินดี§!"
  r_trade_value:1 "£trade_value£ §YTrade Value§!"
  r_loyalty:1 "£loyalty£ §Yความภักดีต่อเดือน§!"
@@ -909,7 +912,7 @@
  specialist.920.name:0 "Rare Cache"
  specialist.920.desc:1 "The team at [From.GetName] has news to share with us.  [Root.SensorReadings]\n\n[Root.SensorReadingsRare]"
  specialist.920.desc.gestalt:0 "There's good news from [From.GetName] after our drones' latest findings."
- SCHOLARIUM_PLANETARY_SENSORS:0 "Scholarium Sensor Abnomality"
+ SCHOLARIUM_PLANETARY_SENSORS:0 "Scholarium Sensor Abnormality"
  SCHOLARIUM_PLANETARY_SENSORS_DESC:1 "We have picked up on uncommon signals coming from [From.GetName], seemingly trying to initiate contact with us. We have been unable to communicate with whatever or whoever it is, and will have to send a ship to inspect it more closely if we want to learn more about what it might be."
  SensorReadings1:0 "They came across the debris of a ship which had crashed at the location, still sending out weak signals every now and then."
  SensorReadings2:0 "They found an old mining station in orbit, seemingly abandoned by their owners a long time ago."
