--- a/mod/thmod/localisation/english/pop_factions_l_english.yml
+++ b/mod/thmod/localisation/english/pop_factions_l_english.yml
@@ -468,6 +468,14 @@
  POP_FACTION_NO_EFFECTS_DESC:0 "The $FACTION$ will never have any effects."
  POP_FACTION_NO_CURRENT_EFFECTS:0 "No current effects"
  POP_FACTION_NO_CURRENT_EFFECTS_DESC:0 "The $FACTION$ have no effects at this time."
+ faction_demand_HAPPY_WE_RULE:0 "Ruler of their Ethic"
+ faction_demand_HAPPY_WE_RULE_desc:0 "Having a Ruler of their ethic pleases the [Root.GetName]."
+ faction_demand_HATE_RULER_ETHICS:0 "Ruler shouldn't have Opposing Ethic"
+ faction_demand_HATE_RULER_ETHICS_desc:0 "Having a Ruler of the opposing ethic displeases the [Root.GetName]."
+ faction_demand_ACCEPTABLE_RULER_ETHICS:0 "Ruler has Empire Ethic"
+ faction_demand_ACCEPTABLE_RULER_ETHICS_desc:0 "Having a Ruler matching the Empire's Ethics is tolerated by the [Root.GetName].\n\nA Ruler of their own Ethic would be even better."
+ faction_demand_REPRESENTED_ON_COUNCIL:0 "Represented on Council"
+ faction_demand_REPRESENTED_ON_COUNCIL_desc:0 "Having a Ruler or Councilor of their ethic will please the [Root.GetName]."
  POP_FACTION_SEPARATIST_DEMAND_TITLE_1:0 "§H[parameter:planet.GetName]ian§! autonomy"
  POP_FACTION_SEPARATIST_DEMAND_DESC_1:0 "Establish a new Sector with §H[parameter:planet.GetName]§! as its capital."
  POP_FACTION_SEPARATIST_DEMAND_TITLE_2:0 "§H[parameter:planet.GetName]ian§! independence"
@@ -611,8 +619,8 @@
  POP_FACTION_PRETENDER_INSTALL_TITLE:0 "Install Pretender"
  POP_FACTION_PRETENDER_INSTALL_DESC:0 "Install §Y[parameter:pretender.GetName]§! as the new Ruler"
  factions.1.title:0 "ก่อตั้งกลุ่มการเมือง"
- factions.1.desc:0 "A new faction has recently been gaining traction in the internal political landscape of the [Root.Owner.GetName]. They call themselves the [Root.GetName], and under the leadership of their founder, [Root.Leader.GetTitle] [Root.Leader.GetName], their members have been pushing hard for us to deal with the various issues that concern them.\n\nWe are likely to see the emergence of additional factions in the future, as our population grows and their ethics drift in different directions. A disgruntled faction will be a source of trouble, but those that approve of the government's actions could prove useful..."
- factions.1.desc.start:0 "A new faction has recently been gaining traction in the internal political landscape of the [Root.Owner.GetName]. Led by §H[Root.Leader.GetTitle] [Root.Leader.GetName]§!, they call themselves the §H[Root.GetName]§!. "
+ factions.1.desc:1 "A new faction has recently been gaining traction in the internal political landscape of the [Root.Owner.GetName]. They call themselves the [Root.GetName], and their members have been pushing hard for us to deal with the various issues that concern them.\n\nWe are likely to see the emergence of additional factions in the future, as our population grows and their ethics drift in different directions. A disgruntled faction will be a source of trouble, but those that approve of the government's actions could prove useful..."
+ factions.1.desc.start:1 "A new faction has recently been gaining traction in the internal political landscape of the [Root.Owner.GetName]. They call themselves the §H[Root.GetName]§!. "
  factions.1.desc.firstfinisher:0 "A disgruntled faction will be a source of trouble, but one that approves of the government's actions could prove useful..."
  factions.1.desc.imperialist:0 "Their members have been pushing hard for us to assert our military dominance over the rest of the galaxy.\n\n"
  factions.1.desc.isolationist:0 "Their members are advocating for closed borders and non-interference with galactic affairs.\n\n"
