--- a/mod/thmod/localisation/english/triggers_effects_l_english.yml
+++ b/mod/thmod/localisation/english/triggers_effects_l_english.yml
@@ -55,6 +55,8 @@
  IS_UNDER_COLONIZATION:0 "กำลังตั้งอาณานิคม"
  HAS_SAME_ETHOS:0 "มีจริยธรรมเช่นเดียวกับ $COUNTRY|Y$"
  DOES_NOT_HAVE_SAME_ETHOS:0 "ไม่มีจริยธรรมเช่นเดียวกับ $COUNTRY|Y$"
+ IS_BACKGROUND_PLANET:0 "$PLANET$ เป็นดาวบ้านเกิดของ $LEADER$"
+ IS_NOT_BACKGROUND_PLANET:0 "$PLANET$ ไม่เป็นดาวบ้านเกิดของ $LEADER$"
  HAS_ETHIC:0 "มีจริยธรรม §Y$ETHIC$§!"
  HAS_ETHIC_ICON_TIP:0 "ตัวเลือกนี้สามารถใช้ได้เนื่องจาก $WHO|H$ มีจริยธรรม $ETHIC|Y$"
  HAS_CIVIC_ICON_TIP:0 "ตัวเลือกนี้สามารถใช้ได้เนื่องจาก $WHO|H$ มีพลเมือง $CIVIC|Y$"
@@ -166,6 +168,22 @@
  HAS_NOT_NUM_ORGANIC_POP_INCREASE:0 "Amount of Organic Pops gained per Year is NOT $COMPARATOR$ $NUM|Y$"
  HAS_NUM_ARTIFICIAL_POP_ASSEMBLY:0 "Amount of Artificial Pops gained per Year is $COMPARATOR$ $NUM|Y$"
  HAS_NOT_NUM_ARTIFICIAL_POP_ASSEMBLY:0 "Amount of Artificial Pops gained per Year is NOT $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAITS_NEGATIVE:0 "Number of negative traits are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAITS_POSITIVE:0 "Number of positive traits are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAITS:0 "Number of traits are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAITS_NEGATIVE_COUNCILOR:0 "Number of negative Councilor Traits are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAITS_POSITIVE_COUNCILOR:0 "Number of positive Councilor Traits are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAITS_COUNCILOR:0 "Number of Councilor Traits are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAITS_NEGATIVE_NON_COUNCIL:0 "Number of negative non Councilor Traits are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAITS_POSITIVE_NON_COUNCIL:0 "Number of positive non Councilor Traits are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAIT_TIERS_NEGATIVE:0 "Number of negative trait tiers are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAIT_TIERS_POSITIVE:0 "Number of positive trait tiers are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAIT_TIERS:0 "Number of trait tiers are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAIT_TIERS_NEGATIVE_COUNCILOR:0 "Number of negative Councilor trait tiers are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAIT_TIERS_POSITIVE_COUNCILOR:0 "Number of positive Councilor trait tiers are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAIT_TIERS_COUNCILOR:0 "Number of Councilor trait tiers are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAIT_TIERS_NEGATIVE_NON_COUNCIL:0 "Number of negative non Councilor trait tiers are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAIT_TIERS_POSITIVE_NON_COUNCIL:0 "Number of positive non Councilor trait tiers are $COMPARATOR$ $NUM|Y$"
  HAS_NUM_BUILDINGS:0 "จำนวนสิ่งปลูกสร้าง $BUILDING$ $COMPARATOR$ $NUM|Y$"
  HAS_NOT_NUM_BUILDINGS:0 "จำนวนสิ่งปลูกสร้าง $BUILDING$ ไม่ $COMPARATOR$ $NUM|Y$"
  HAS_NUM_BUILDINGS_EXISTING_AND_IN_CONSTRUCTION:0 "จำนวนสิ่งปลูกสร้าง $BUILDING$ (รวมที่อยู่ในคิวก่อสร้าง) $COMPARATOR$ $NUM|Y$"
@@ -205,6 +223,17 @@
  TRIGGER_HAS_GOVERNMENT_AUTHORITY:0 "มีระบอบการปกครอง $KEY|Y$"
  TRIGGER_HAS_NOT_GOVERNMENT_AUTHORITY:1 "ไม่มีระบอบการปกครอง $KEY|Y$"
  HAS_GOVERNMENT_ICON_TIP:0 "This option is available due to $WHO|H$ being a $GOV|Y$"
+ LEADER_IS_COUNCILOR:0 "Is on the Council"
+ LEADER_IS_NOT_COUNCILOR:0 "Is NOT on the Council"
+ LEADER_ISWAS_COUNCILOR_SHORT:0 "Councilor"
+ LEADER_IS_COUNCILOR_TYPE:0 "Assigned as $COUNCILORTYPE|Y$"
+ LEADER_IS_NOT_COUNCILOR_TYPE:0 "Not assigned as $COUNCILORTYPE|Y$"
+ ETHIC_REPRESENTED_ON_COUNCIL:1 "$ETHIC$ ethic represented in the Council"
+ ETHIC_NOT_REPRESENTED_ON_COUNCIL:1 "$ETHIC$ ethic NOT represented in the Council"
+ LEADER_IS_RULER:0 "Is Ruler"
+ LEADER_IS_NOT_RULER:0 "Is NOT Ruler"
+ LEADER_IS_HEIR:0 "Is Heir"
+ LEADER_IS_NOT_HEIR:0 "Is NOT Heir"
  IS_PRIMITIVE:1 "เป็น pre-FTL"
  IS_NOT_PRIMITIVE:1 "ไม่เป็น pre-FTL"
  HAS_NEXT_PRE_FTL_AGE:0 "$COUNTRY|Y$ is pre-FTL and can advance tech age"
@@ -364,6 +393,7 @@
  effect_random_system:0 "Random System"
  ANY_SYSTEM_WITHIN_BORDERS:0 "Any System within borders"
  any_system_within_border_trigger:0 "$ANY_SYSTEM_WITHIN_BORDERS$"
+ any_archaeological_site_trigger:0 "Any Archaeological Site"
  count_system_within_border_trigger:1 "Number of Systems within borders$CONDITIONS$ $IS_NOT$ $COMPARATOR$ $NUM|Y$"
  count_system_within_border_all_trigger:0 "$IS_ALL_NOT$ Systems within borders fulfill the following conditions"
  effect_every_system_within_border:0 "Every System within borders"
@@ -575,6 +605,7 @@
  HAS_NOT_TRUCE_TRIGGER:0 "$COUNTRY|Y$ ไม่มีการพักรบกับ $TARGET|Y$"
  HAS_TRUCE_TRIGGER:0 "$COUNTRY|Y$ has truce with $TARGET|Y$"
  SET_LEADER_AGE_EFFECT:0 "Change the age to $AGE|Y$"
+ ADD_LEADER_AGE_EFFECT:0 "Change Leader age by $AGE|Y$ years"
  SET_LEADER_IMMORTAL_EFFECT:0 "Becomes immortal"
  SET_LEADER_MORTAL_EFFECT:0 "Becomes mortal"
  IS_IMMORTAL_TRIGGER:0 "Is immortal"
@@ -603,12 +634,12 @@
  HAS_OPPOSING_ETHICS_DIVERGENCE_TRIGGER:0 "Has opposing ethics $COMPARE$ $VAL0|0Y%$ steps"
  IS_NOT_WAR_LEADER:0 "Is not war leader"
  IS_WAR_LEADER:0 "Is war leader"
- PERC_COMMUNICATIONS_WITH_PLAYABLE_TRIGGER:0 "Percentage of communictions with other playable empires is $COMPARE$ $VALUE|%$"
- PERC_COMMUNICATIONS_WITH_PLAYABLE_NOT_TRIGGER:0 "Percentage of communictions with other playable empires is NOT $COMPARE$ $VALUE|%$"
+ PERC_COMMUNICATIONS_WITH_PLAYABLE_TRIGGER:0 "Percentage of communications with other playable empires is $COMPARE$ $VALUE|%$"
+ PERC_COMMUNICATIONS_WITH_PLAYABLE_NOT_TRIGGER:0 "Percentage of communications with other playable empires is NOT $COMPARE$ $VALUE|%$"
  NUM_COMMUNICATIONS_TRIGGER:0 "Number of communications is $COMPARE$ $VALUE$"
  NUM_COMMUNICATIONS_NOT_TRIGGER:0 "Number of communications is NOT $COMPARE$ $VALUE$"
- NUM_FALLEN_EMPIRES_TRIGGER:0 "Number of Fallen Empires is $COMPARE$ $VALUE$"
- NUM_FALLEN_EMPIRES_NOT_TRIGGER:0 "Number of Fallen Empires is NOT $COMPARE$ $VALUE$"
+ NUM_FALLEN_EMPIRES_TRIGGER:0 "จำนวนจักรวรรดิฟอลเล็น $COMPARE$ $VALUE$"
+ NUM_FALLEN_EMPIRES_NOT_TRIGGER:0 "จำนวนจักรวรรดิฟอลเล็น ไม่$COMPARE$ $VALUE$"
  MONTHLY_INCOME_TRIGGER:0 "Monthly $RESOURCE$ Income is $COMPARE$ $VALUE$"
  MONTHLY_INCOME_NOT_TRIGGER:0 "Monthly $RESOURCE$ Income is NOT $COMPARE$ $VALUE$"
  COUNT_TECH_OPTIONS_TRIGGER:0 "Number of Tech Options is $NOT$$COMPARE$ $VALUE$"
@@ -893,8 +924,8 @@
  DEF_WAR_EXHAUSTION_SUM_AT_LEAST:0 "การป้องกัน ความอิดโรยจากสงคราม รวม $VAL0|2Y$ อย่าน้อย $COMPARE$ $VAL1|2Y$"
  GALAXY_PERCENTAGE_LESS_THAN:2 "Galaxy percentage ($VAL0|2Y$) is NOT $COMPARE$ $VAL1|2Y$"
  GALAXY_PERCENTAGE_AT_LEAST:2 "Galaxy percentage ($VAL0|2Y$) is $COMPARE$ $VAL1|2Y$"
- ADDITIONAL_CRISIS_STRENGTH_NOT_TRIGGER:0 "Additional Crisis Strength ($VAL0|2Y$) is NOT $COMPARE$ $VAL1|2Y$"
- ADDITIONAL_CRISIS_STRENGTH_TRIGGER:0 "Additional Crisis Strength ($VAL0|2Y$) is $COMPARE$ $VAL1|2Y$"
+ ADDITIONAL_CRISIS_STRENGTH_NOT_TRIGGER:0 "ความแข็งแกร่งของไครซิสเพิ่มเติม ($VAL0|2Y$) ไม่$COMPARE$ $VAL1|2Y$"
+ ADDITIONAL_CRISIS_STRENGTH_TRIGGER:0 "ความแข็งแกร่งของไครซิสเพิ่มเติม ($VAL0|2Y$) $COMPARE$ $VAL1|2Y$"
  SPECIES_PLANET_SLAVE_PERCENTAGE_LESS_THAN:0 "$SPECIES$ planet slave percentage less than $COMPARE$ $VAL1|2Y$"
  SPECIES_PLANET_SLAVE_PERCENTAGE_AT_LEAST:0 "$SPECIES$ planet slave percentage at least $COMPARE$ $VAL1|2Y$"
  HAS_SPACEPORT_MODULE:0 "Spaceport has the $MODULE|Y$ module upgrade.\n"
@@ -1039,7 +1070,7 @@
  ALL_WAR_ATTACKERS:0 "All War Attackers"
  GIVE_TECH_EFFECT:0 "ได้รับเทคโนโลยี:\n$TECH|Y$\n"
  ADD_RESEARCH_OPTION_EFFECT:1 "ได้รับตัวเลือกการวิจัย:\n$TECH|Y$\n"
- ADD_TECH_PROGRESS_EFFECT:0 "ได้รับความก้าวหน้าเทคโนโลยี:\n$TECH|Y$ §G+$VALUE|%1$§!\n\n"
+ ADD_TECH_PROGRESS_EFFECT:1 "ได้รับความก้าวหน้าเทคโนโลยี:\n    $TECH|Y$ §G+$VALUE|%0$§!\n"
  ENABLE_SPECIAL_PROJECT:0 "ออกโครงการพิเศษ: $PROJECT_NAME|Y$\n"
  SET_OWNER_EFFECT:2 "$OWNER|Y$ becomes the new owner of $OBJECT|Y$\n"
  SET_CONTROLLER_EFFECT:0 "§Y$CONTROLLER$§! becomes controller\n"
@@ -1047,8 +1078,8 @@
  ADD_PHYSICS_RESEARCH_EFFECT:0 "$VALUE$ Physics research\n"
  ADD_SOCIETY_RESEARCH_EFFECT:0 "$VALUE$ Society research\n"
  ADD_ENGINEERING_RESEARCH_EFFECT:0 "$VALUE$ Engineering research\n"
- ADD_MODIFIER:1 "$MODNAME|Y$ เพิ่มการปรับเปลี่ยนดังนี้\n$EFFECT$\n"
- ADD_MODIFIER_DAYS:1 "$MODNAME|Y$ เพิ่มการปรับเปลี่ยนเป็นเวลา $TIME|Y$ $PERIOD$ ดังนี้\n$EFFECT$\n"
+ ADD_MODIFIER:2 "$MODNAME|Y$ เพิ่มการปรับเปลี่ยนดังนี้:\n$EFFECT$\n"
+ ADD_MODIFIER_DAYS:2 "$MODNAME|Y$ เพิ่มการปรับเปลี่ยนเป็นเวลา $TIME|Y$ $PERIOD$ ดังนี้:\n$EFFECT$\n"
  ADD_OPINION_MODIFIER:1 "ทัศนคติ $SCOPE|Y$ ต่อ $COUNTRY|Y$ เปลี่ยนไป $VALUE$\n"
  REMOVE_OPINION_MODIFIER:1 "ทัศนคติ $SCOPE|Y$ ต่อ $COUNTRY|Y$ เปลี่ยนไป $VALUE$\n"
  REMOVE_OPINION_MODIFIER_ANY:1 "$SCOPE|Y$ removes the $MODNAME|Y$ opinion modifier towards anyone\n"
@@ -1094,6 +1125,8 @@
  SET_ORIGIN:0 "Origin set to $ORIGIN|Y$\n"
  SET_GOVERNMENT_COOLDOWN_EFFECT:0 "Government is locked for $DAYS$ days\n"
  REMOVE_GOVERNMENT_COOLDOWN_EFFECT:0 "Government is unlocked\n"
+ RESET_POLICY_COOLDOWNS_EFFECT:1 "Policies are unlocked\n"
+ UNLOCK_COUNCIL_SLOT:0 "Unlocks $AMOUNT|Y$ Councilor Slot(s)"
  ADD_SKILL:1 "สกิลเลเวลของ $LEADER$ เปลี่ยน $AMOUNT|Y$\n"
  SET_SKILL:1 "สกิลเลเวลของ $LEADER$ กำหนดเป็น $AMOUNT|Y$\n"
  SET_RING_YES:0 "Adds a ring around the planet\n"
@@ -1172,6 +1205,8 @@
  BEGIN_EVENT_CHAIN_EFFECT:1 "Begins the $NAME$ Event Chain.\n\n"
  END_EVENT_CHAIN_EFFECT:1 "Ends the $NAME$ Event Chain.\n\n"
  SHIFT_ETHIC_EFFECT:0 "\n$COUNTRY|Y$ shifts its ethics towards $ETHIC|Y$\n"
+ CHANGE_BACKGROUND_ETHIC:0 "Change Leader Ethic to $ETHIC|Y$"
+ SET_COUNCIL_POSITION_EFFECT:0 "Assigns Leader to Council as $POSITION|Y$"
  ADD_ETHIC_EFFECT:0 "\nได้รับจริยธรรม $ETHIC|Y$\n"
  CLEAR_ETHOS_EFFECT:0 "จริยธรรมทั้งหมดจะถูกลบ"
  REMOVE_ETHIC_EFFECT:1 "จริยธรรม $ETHIC|Y$ หายไป\n"
@@ -1184,10 +1219,12 @@
  MODIFY_SPECIES_BLANK:0 "Modify pops in $COUNTRY|Y$"
  ESTABLISH_CONTACT_EFFECT:0 "Establishes contact with $COUNTRY|Y$"
  ADD_EVENT_CHAIN_COUNTER_EFFECT:0 "+$AMOUNT|Y$ $COUNTER$\n"
+ RESET_EVENT_CHAIN_COUNTER_EFFECT:0 "รีเซ็ต $COUNTER$\n"
  ADD_ANOMALY_EFFECT:0 "Add an Anomaly\n"
  SET_DISABLE_AT_HEALTH_EFFECT:0 "Will be disabled upon reaching $VALUE|%Y$ Health"
  ADD_DEPOSIT_EFFECT:1 "เพิ่ม $DEPOSIT|Y$ ไปที่ $PLANET|Y$\n"
  ADD_RANDOM_DEPOSIT_EFFECT:1 "Add a random deposit to $PLANET|Y$\n"
+ ADD_CATEGORY_DEPOSIT_EFFECT:0 "Add a random deposit of category $CATEGORY$ to $PLANET|Y$\n"
  REMOVE_DEPOSIT_EFFECT:1 "ลบ $DEPOSIT|Y$ ออกจาก $PLANET|Y$\n"
  CLEAR_DEPOSITS_EFFECT:1 "All Planetary Features are removed\n"
  CLEAR_BLOCKERS_EFFECT:1 "All Blockers are cleared\n"
@@ -1234,6 +1271,7 @@
  CHANGE_GOVERNMENT_CIVICS_EFFECT_RANDOM:0 "Change to Random Government Civics"
  ASSIGN_LEADER_EFFECT:0 "$LEADER$ is assigned as leader"
  UNASSIGN_LEADER_EFFECT:0 "$LEADER$ ถูกปลดจากผู้นำแล้ว"
+ SET_YEARS_SERVED_EFFECT:0 "เปลี่ยนอายุงาน(ปี)เพื่อให้ตรงกันกับ $LEADER|Y$"
  EXILE_LEADER_EFFECT:0 "$LEADER$ is exiled"
  SET_LEADER_EFFECT:0 "$LEADER$ is set as leader"
  SET_FEDERATION_LEADER_EFFECT:0 "$COUNTRY|Y$ becomes leader of $FEDERATION|Y$"
@@ -1244,7 +1282,10 @@
  SET_PLANET_MAX_HEALTH_EFFECT:0 "ตั้งพลังชีวิตสูงสุดเป็น $VALUE|Y$"
  SET_PLANET_HEALTH_EFFECT:0 "ตั้งพลังชีวิตเป็น $VALUE|Y$"
  ADD_TRAIT:1 "§H$LEADER$§! gains the §H$TRAIT$§! trait, granting the following effects:\n$EFFECTS$\n"
- REMOVE_TRAIT:0 "Removed $TRAIT$ trait from $LEADER$\n"
+ REMOVE_TRAIT:1 "Removes $TRAIT$ trait from $LEADER|Y$\n"
+ REMOVE_ALL_NEGATIVE_TRAITS:1 "Removes all negative traits from $LEADER|Y$\n"
+ REMOVE_ALL_POSITIVE_TRAITS:0 "Removes all positive traits from $LEADER|Y$\n"
+ REMOVE_ALL_TRAITS:0 "Removes all traits from $LEADER|Y$\n"
  CHANGE_COUNTRY_TYPE_EFFECT:0 "Country Type will change to $TYPE|Y$"
  ADD_MISSION_PROGRESS:0 "เพิ่มความคืบหน้าของภารกิจ: $NUM|Y$"
  HAS_NUM_ETHICS:0 "จำนวนจริยธรรม $COMPARATOR$ $NUM|Y$"
@@ -1751,12 +1792,13 @@
  effect_every_council_member:0 "Every Council Member"
  count_council_member_trigger:0 "Number of Council Members$CONDITIONS$ $IS_NOT$ $COMPARATOR$ $NUM|Y$"
  count_council_member_all_trigger:0 "$IS_ALL_NOT$ Council Members fulfill the following conditions"
+ add_council_agenda_progress_effect_desc:0 "Council Agenda progressed by $VALUE$"
  effect_random_fleet_in_orbit:0 "Random Fleet in Orbit"
  effect_every_fleet_in_orbit:0 "Every Fleet in Orbit"
- NUM_FALLEN_EMPIRES_LESS_THAN:0 "Number of fallen empires ($VAL0|Y$) $COMPARE$ $VAL1|Y$"
- NUM_FALLEN_EMPIRES_AT_LEAST:0 "Number of fallen empires ($VAL0|Y$) $COMPARE$ $VAL1|Y$"
- NUM_AI_EMPIRES_LESS_THAN:0 "Number of AI empires ($VAL0|Y$) $COMPARE$ $VAL1|Y$"
- NUM_AI_EMPIRES_AT_LEAST:0 "Number of AI empires ($VAL0|Y$) $COMPARE$ $VAL1|Y$"
+ NUM_FALLEN_EMPIRES_LESS_THAN:0 "จำนวนจักรวรรดิฟอลเล็น ($VAL0|Y$) $COMPARE$ $VAL1|Y$"
+ NUM_FALLEN_EMPIRES_AT_LEAST:0 "จำนวนจักรวรรดิฟอลเล็น ($VAL0|Y$) $COMPARE$ $VAL1|Y$"
+ NUM_AI_EMPIRES_LESS_THAN:0 "จำนวนของจักรวรรดิ AI ($VAL0|Y$) $COMPARE$ $VAL1|Y$"
+ NUM_AI_EMPIRES_AT_LEAST:0 "จำนวนของจักรวรรดิ AI ($VAL0|Y$) $COMPARE$ $VAL1|Y$"
  GALAXY_SIZE_IS:0 "ขนาดกาแล็กซีคือ $SIZE|Y$"
  GALAXY_SIZE_IS_NOT:0 "ขนาดกาแล็กซีไม่ใช่ $SIZE|Y$"
  GALAXY_SHAPE_IS:0 "Galaxy Shape is $SHAPE|Y$"
@@ -1879,7 +1921,7 @@
  HAS_LOYALTY_AT_LEAST:0 "$SUBJECT|H$ has $COMPARE$ $VAL1|2Y$ loyalty"
  HAS_MONTHLY_LOYALTY_LESS_THAN:0 "$SUBJECT|H$ ความภักดีต่อเดือนไม่ $COMPARE$ $VAL1|2Y$"
  HAS_MONTHLY_LOYALTY_AT_LEAST:0 "$SUBJECT|H$ ความภักดีต่อเดือน $COMPARE$ $VAL1|2Y$"
- effect_every_archaeological_site:0 "Every Archeological Site"
+ effect_every_archaeological_site:1 "Every Archaeological Site"
  AWARENESS_TRIGGER:0 "Awareness is $COMPARE$ $VALUE|Y$"
  AWARENESS_NOT_TRIGGER:0 "Awareness is NOT $COMPARE$ $VALUE|Y$"
  AWARENESS_STAGE_TRIGGER:0 "Awareness level is $COMPARE$ $STAGE|Y$"
