--- a/mod/thmod/localisation/english/unique_system_l_english.yml
+++ b/mod/thmod/localisation/english/unique_system_l_english.yml
@@ -5,7 +5,7 @@
  unique.1.desc:0 "After meticulously searching and analyzing the valley where we picked up on the weird signal, we finally managed to track down the crash site of an old dilapidated ship. Though it still sends out a call for aid, the vessel seems to be mostly empty, and there's no sign of life inside.\n\nOne of our [Root.Owner.GetScientistPlural] came across a small camp site while we were thoroughly examining the area, and after following some old tracks they found an old laboratory. Though blocked by debris, for now, this might be the location of the missing xenos from the ship."
  unique.1.a:0 "Clear out the debris."
  unique.5.title:0 "The Weird Laboratory"
- unique.5.desc:0 "After clearing out the last of the debris our [Root.Owner.GetScientistPlural] found the bodies of a group of xenos, presumably the ones who had arrived on the crashed ship. After their remains were carefully analyzed, our [Root.Owner.GetScientistPlural] have concluded they must have died from an early degredation of their internal organs - most likely due to some unknown bacteria or disease.\n\nIt is still unclear what their aims were, or what brought them to this specific location in their last moments. The old machines and computer banks of the laboratory are unsalvagable, and there's nothing else in the room itself that can give us any hints.\n\nA small door leading further downwards is blocked off, and any preliminary attempts at decrypting it have failed. But our [Root.Owner.GetScientistPlural] believe they can get them open given some time."
+ unique.5.desc:0 "After clearing out the last of the debris our [Root.Owner.GetScientistPlural] found the bodies of a group of xenos, presumably the ones who had arrived on the crashed ship. After their remains were carefully analyzed, our [Root.Owner.GetScientistPlural] have concluded they must have died from an early degradation of their internal organs - most likely due to some unknown bacteria or disease.\n\nIt is still unclear what their aims were, or what brought them to this specific location in their last moments. The old machines and computer banks of the laboratory are unsalvageable, and there's nothing else in the room itself that can give us any hints.\n\nA small door leading further downwards is blocked off, and any preliminary attempts at decrypting it have failed. But our [Root.Owner.GetScientistPlural] believe they can get them open given some time."
  unique.5.a:0 "One last push, and we will unravel the secrets of this place."
  unique.10.title:0 "The Unique Specimens"
  unique.10.desc:0 "With a small release of air the doors to the final chamber of the laboratory finally opens, significantly larger than anyone would expect. Rows and rows of cloning vats fills the area - hundreds if not thousands of creatures locked away underground.\n\nOur [Root.Owner.GetScientistPlural] quickly conclude they are of the same species as the remains we found earlier. A small button by each of the cloning vats seems to be all that is needed to wake them up, if we so want."
@@ -87,3 +87,21 @@
  UNIQUE_SYSTEM_BATTLE_CAT_DESC:0 "A long-forgotten battlefield where ancient empires once fought for supremacy of the galaxy - now all that remains are the vessels of those who fought under their banners."
  unique.125.name:0 "Ancient Battlefield"
  unique.125.desc:0 "We sent in some of our [Root.Owner.GetScientistPlural] to analyze the remains of the ancient battleships in [From.solar_system.GetName], and glean from them what they can. Though unable to determine how old these vessels are, or for what banner they once fought, they managed to derive some information about the building techniques used to craft the ships."
+ NAME_Lone_Defender_system:0 "Xraneax"
+ NAME_Lone_Defender_planet:0 "Baloryz"
+ NAME_Lone_Defender_country:0 "$NAME_Lone_Defender_planet$"
+ NAME_Lone_Defender_fleet:0 "Lone Defender"
+ NAME_Lone_Defender_ship:0 "Lone Defender"
+ NAME_Lone_Defender_class:0 "$NAME_Lone_Defender_system$"
+ Lone_Defender_message:0 "Why"
+ unique.130.name:0 "Mutual Assured Destruction"
+ unique.130.desc:0 "Our initial scan of the §Y$NAME_Lone_Defender_system$§! system revealed that the planet $NAME_Lone_Defender_planet$ was destroyed by nuclear weapons. The inhabitants annihilated themselves using planet-based weapons so powerful that they even shattered their moon.\n\nOur only chance to learn more about what happened is a ship patrolling the system, but it is already targeting us with its missiles."
+ unique.135.name:0 "Lone Defender"
+ unique.135.desc:0 "No life signs were detected aboard the vessel, so while clearly an AI, the ship repeatedly prioritized self-preservation over optimal combat effectiveness. This means that the only survivor of the horrible conflict on §Y$NAME_Lone_Defender_planet$§! was sapient.\n\nThe ship sent a brief message a moment before destruction:\n\n"$Lone_Defender_message$"\n\nIt is unclear if this was the start of the question why the inhabitants of $NAME_Lone_Defender_planet$ incinerated themselves or why we destroyed the AI ship.\n\nThe technology is rudimentary by our standards, but we may gain some insights by disassembling the remains."
+ unique.135.desc.regular:0 "$unique.135.desc$ Or because it valiantly performed its duty, we honor the AI by renaming the planet after its lone defender."
+ unique.135.desc.memorialist:0 "$unique.135.desc$ Or we leave the floating parts as a memorial, and rename the planet and system after the lone defender and its final message."
+ unique.135.a:0 "Pick apart the debris."
+ unique.135.b.regular:0 "Rename the planet."
+ unique.135.b.regular.tt:0 "The planet $NAME_Lone_Defender_planet$ is renamed to §Y$NAME_Lone_Defender_ship$§!."
+ unique.135.b.memorialist:0 "Rename the planet and system."
+ unique.135.b.memorialist.tt:0 "The planet $NAME_Lone_Defender_planet$ is renamed to §Y$NAME_Lone_Defender_ship$§!.\nThe system $NAME_Lone_Defender_system$ is renamed to §Y$Lone_Defender_message$§!."
